--- a/index.html
+++ b/index.html
@@ -6,12 +6,64 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 48 个博客、8577 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 48 个博客、8601 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=blog.mauve.icu/Golang%20%E8%B8%A9%E5%9D%91%20%E2%80%94%E2%80%94%20interface%20%E4%B8%BA%E5%8F%82%E6%95%B0%E7%9A%84%E6%97%B6%E5%80%99%E4%BC%A0%20nil%20%E6%8C%87%E9%92%88.html>2024-07-28 Golang 踩坑 —— interface 为参数的时候传 nil 指针</a></li>
+
+<li><a href=jasonkayzk.github.io/%E7%AE%80%E5%8D%95%E6%98%93%E7%94%A8%E7%9A%84%E5%86%85%E7%BD%91%E7%A9%BF%E9%80%8F%E7%BB%84%E7%BD%91%E5%B7%A5%E5%85%B7ZeroTier.html>2024-07-28 简单易用的内网穿透组网工具ZeroTier</a></li>
+
+<li><a href=jasonkayzk.github.io/%E4%BA%BA%E7%94%9F%E3%81%AF%E4%B8%80%E5%BA%A6%E3%81%8D%E3%82%8A%E3%80%82%E3%81%A0%E3%81%8B%E3%82%89%E6%A5%BD%E3%81%97%E3%82%80%E3%81%B9%E3%81%8D%E3%82%88.html>2024-07-27 人生は一度きり。だから楽しむべきよ</a></li>
+
+<li><a href=jasonkayzk.github.io/%E8%A7%A3%E5%86%B3VMWare%E6%A1%A5%E6%8E%A5%E6%A8%A1%E5%BC%8F%E4%B8%8B%E6%97%A0%E6%B3%95%E8%87%AA%E5%8A%A8%E8%8E%B7%E5%8F%96IP%E7%9A%84%E9%97%AE%E9%A2%98.html>2024-07-27 解决VMWare桥接模式下无法自动获取IP的问题</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%93%E9%A2%89%E8%AF%AD%E8%A8%80%E8%AF%95%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%EF%BC%88%E4%B8%89%EF%BC%89.html>2024-07-27 仓颉语言试写猜数字（三）</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%93%E9%A2%89%E8%AF%AD%E8%A8%80%E8%AF%95%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%EF%BC%88%E5%AE%8C%EF%BC%89.html>2024-07-27 仓颉语言试写猜数字（完）</a></li>
+
+<li><a href=jasonkayzk.github.io/%E3%80%90%E8%BD%AC%E3%80%91MacOS%E5%8F%8C%E5%BC%80%E5%BE%AE%E4%BF%A1%E7%9A%84%E6%96%B9%E6%B3%95.html>2024-07-26 【转】MacOS双开微信的方法</a></li>
+
+<li><a href=hijiangtao.github.io/%E8%BD%A6%E9%87%8C%E7%9A%84%E5%BE%AE%E5%85%89.html>2024-07-25 车里的微光</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/LKMM.html>2024-07-24 LKMM</a></li>
+
+<li><a href=babyno.top/%E8%87%AA%E5%B7%B1%E5%86%99%E4%B8%80%E4%B8%AARAG%E5%BA%94%E7%94%A8.html>2024-07-24 自己写一个RAG应用</a></li>
+
+<li><a href=jasonkayzk.github.io/%E4%B8%80%E4%BA%9Btg%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97%E6%80%BB%E7%BB%93.html>2024-07-23 一些tg使用指南总结</a></li>
+
+<li><a href=jasonkayzk.github.io/DockerHub%E8%A2%AB%E5%A2%99%E4%B9%8B%E5%90%8E%E7%9A%84%E4%B8%80%E4%BA%9B%E6%9B%BF%E4%BB%A3%E6%96%B9%E6%A1%88%E6%B1%87%E6%80%BB.html>2024-07-23 DockerHub被墙之后的一些替代方案汇总</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%93%E9%A2%89%E8%AF%AD%E8%A8%80%E8%AF%95%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%EF%BC%88%E4%BA%8C%EF%BC%89.html>2024-07-23 仓颉语言试写猜数字（二）</a></li>
+
+<li><a href=kexizeroing.github.io/Using%20Blob%20and%20ArrayBuffer%20in%20JavaScript.html>2024-07-22 Using Blob and ArrayBuffer in JavaScript</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%93%E9%A2%89%E8%AF%AD%E8%A8%80%E8%AF%95%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%EF%BC%88%E4%B8%80%EF%BC%89.html>2024-07-22 仓颉语言试写猜数字（一）</a></li>
+
+<li><a href=jasonkayzk.github.io/%E3%80%90%E8%BD%AC%E3%80%91%E9%97%9C%E6%96%BC%E6%97%A5%E6%96%87%E6%BC%A2%E5%AD%97%E8%88%87%E5%B9%B3%E5%81%87%E5%90%8D%E7%9A%84%E4%BD%BF%E7%94%A8.html>2024-07-21 【转】關於日文漢字與平假名的使用</a></li>
+
+<li><a href=jasonkayzk.github.io/%E6%97%A5%E8%AF%AD%E6%97%B6%E6%80%81%E6%80%BB%E7%BB%93.html>2024-07-21 日语时态总结</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202429%20-%20%E9%9A%A7%E9%81%93%E9%A9%AC%E7%9A%84%E4%BA%BA%E5%92%8C%EF%BC%88%E4%B8%80%EF%BC%89.html>2024-07-21 折返点 2429 - 隧道马的人和（一）</a></li>
+
+<li><a href=jasonkayzk.github.io/%E5%86%85%E7%BD%91%E7%A9%BF%E9%80%8F%E6%88%96%E8%81%94%E6%9C%BA%E7%B3%BB%E5%88%97%E6%96%87%E7%AB%A0%E6%B1%87%E6%80%BB.html>2024-07-20 内网穿透或联机系列文章汇总</a></li>
+
+<li><a href=yuanj.top/Legado%20%E9%98%85%E8%AF%BB%2B%E4%B9%A6%E6%BA%90.html>2024-07-19 Legado 阅读+书源</a></li>
+
+<li><a href=jasonkayzk.github.io/%E4%BD%BF%E7%94%A8nmtui%E9%85%8D%E7%BD%AEwifi%E8%BF%9E%E6%8E%A5.html>2024-07-18 使用nmtui配置wifi连接</a></li>
+
+<li><a href=jasonkayzk.github.io/%E8%80%81%E6%97%A7%E7%AC%94%E8%AE%B0%E6%9C%AC%E5%AE%89%E8%A3%85Debian%E7%B3%BB%E7%BB%9F%E5%90%8EBroadcom%E9%A9%B1%E5%8A%A8%E7%BC%BA%E5%A4%B1%E8%A7%A3%E5%86%B3%E6%96%B9%E6%B3%95.html>2024-07-18 老旧笔记本安装Debian系统后Broadcom驱动缺失解决方法</a></li>
+
+<li><a href=jasonkayzk.github.io/Debian%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE%E5%90%88%E4%B8%8A%E7%AC%94%E8%AE%B0%E6%9C%AC%E7%9B%96%E5%AD%90%E4%B8%8D%E4%BC%91%E7%9C%A0.html>2024-07-18 Debian系统设置合上笔记本盖子不休眠</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202427%20-%20%E9%9A%A7%E9%81%93%E9%A9%AC%E7%9A%84%E5%A4%A9%E6%97%B6%E5%9C%B0%E5%88%A9.html>2024-07-17 折返点 2427 - 隧道马的天时地利</a></li>
+
+<li><a href=yuanj.top/%E5%9B%9E%E5%AE%B6%20and%20%E5%85%B0%E5%B7%9E%E4%B8%A4%E6%97%A5%E6%B8%B8.html>2024-07-15 回家 and 兰州两日游</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%85%AD%E6%9C%88%E8%AF%BB%E5%8A%A8%E7%89%A9%E4%BF%9D%E6%8A%A4%EF%BC%8C%E7%BB%86%E9%9B%AA%EF%BC%8C%E4%BF%AE%E8%A1%8C%E2%80%A6%E2%80%A6%207%20%E6%9C%AC.html>2024-07-14 2024 六月读动物保护，细雪，修行…… 7 本</a></li>
 
 <li><a href=sund.site/RESTful%20Web%20Service%20Cookbook%20%E7%AC%94%E8%AE%B0.html>2024-07-13 RESTful Web Service Cookbook 笔记</a></li>
 
@@ -1323,8 +1375,6 @@
 
 <li><a href=xnum.github.io/gorm%E7%9A%84FirstOrCreate%E9%99%B7%E9%98%B1.html>2023-08-07 gorm的FirstOrCreate陷阱</a></li>
 
-<li><a href=kexizeroing.github.io/Form%20validation%20with%20React%20Hook%20Form%20and%20Zod.html>2023-08-06 Form validation with React Hook Form and Zod</a></li>
-
 <li><a href=iphyer.github.io/%E7%83%A4%20Ribs%20%E8%8F%9C%E8%B0%B1.html>2023-08-06 烤 Ribs 菜谱</a></li>
 
 <li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%23152%20%28Div.%202%29.html>2023-08-06 Educational Codeforces Round#152 (Div. 2)</a></li>
@@ -2104,8 +2154,6 @@
 <li><a href=young-lord.github.io/Windows%20%E8%BF%9C%E7%A8%8B%E6%A1%8C%E9%9D%A2%E7%9A%84%E6%8E%A2%E7%B4%A2.html>2022-11-19 Windows 远程桌面的探索</a></li>
 
 <li><a href=jerkwin.github.io/gmx_MMPBSA%E8%84%9A%E6%9C%AC%E6%9B%B4%E6%96%B0%EF%BC%9A%E5%A4%84%E7%90%86%E4%B8%8D%E8%BF%9E%E7%BB%AD%E7%B4%A2%E5%BC%95.html>2022-11-19 gmx_MMPBSA脚本更新：处理不连续索引</a></li>
-
-<li><a href=kexizeroing.github.io/Using%20Blob%20in%20JavaScript.html>2022-11-18 Using Blob in JavaScript</a></li>
 
 <li><a href=kexizeroing.github.io/Fetch%20API%20requests%20and%20CORS.html>2022-11-18 Fetch API requests and CORS</a></li>
 
