--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -6,7 +6,7 @@ slug: css-effects-collection
 description: ""
 added: "Dec 5 2022"
 tags: [css]</p>
-<h2>updatedDate: "Apr 15 2024"</h2>
+<h2>updatedDate: "July 27 2024"</h2>
 <blockquote><ul>
 <li><a href="https://css-tip.com">https://css-tip.com</a> has a wide collection of CSS tips and tricks, which is a good place to keep up to date with the new CSS features.</li>
 <li><a href="https://anthonyhobday.com/sideprojects/saferules/">https://anthonyhobday.com/sideprojects/saferules/</a> includes some visual design rules you can safely follow every time.</li>
@@ -367,9 +367,13 @@ tags: [css]</p>
 <p>&lt;img alt="just the tabs" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/transition-number.png" width="220"&gt;</p>
 <h3>Filter and backdrop filter</h3>
 <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter">backdrop-filter</a> has the same effect as <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter">filter</a>, with one notable difference — backdrop filters apply only to areas behind the element instead of to the element and its children. Filters, on the other hand, apply directly to the element and its children, and don’t affect anything behind the element.</p>
-<p>&lt;img alt="filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/a9f0c5e0-6f17-4068-b481-17bfac204791.png" width="500"&gt;</p>
-<p>&lt;img alt="backdrop-filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/t0635k.png" width="500"&gt;</p>
-<pre><code class="lang-html">&lt;div class="parent"&gt;
+&lt;figure&gt;
+  &lt;img alt="filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/a9f0c5e0-6f17-4068-b481-17bfac204791.png" width="500"&gt;
+  &lt;figcaption&gt;filter example&lt;/figcaption&gt;
+&lt;/figure&gt;&lt;figure&gt;
+  &lt;img alt="backdrop-filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/t0635k.png" width="500"&gt;
+  &lt;figcaption&gt;backdrop-filter example&lt;/figcaption&gt;
+&lt;/figure&gt;<pre><code class="lang-html">&lt;div class="parent"&gt;
   &lt;div class="blur"&gt;Blur&lt;/div&gt;
   &lt;div class="invert"&gt;Invert&lt;/div&gt;
   &lt;div class="hue"&gt;Hue&lt;/div&gt;
@@ -423,7 +427,7 @@ img {
   animation-range: entry 25% cover 50%;
 }
 </code></pre>
-<p>Because Scroll-Driven Animations are only active when there is scrollable overflow, it is possible to use them as a mechanism to detect if an element can scroll or not.</p>
+<p>Because scroll-driven animations are only active when there is scrollable overflow, it is possible to use them as a mechanism to detect if an element can scroll or not.</p>
 <pre><code class="lang-css">.container {
   height: 250px;
   width: 250px;
@@ -453,6 +457,7 @@ img {
 
   width: var(--s);
   height: var(--s);
+  box-sizing: border-box;
   object-fit: cover;
   transition: .5s;
 }
@@ -473,6 +478,7 @@ img:hover {
 &lt;/style&gt;
 </code></pre>
 <ul>
-<li><code>object-position</code> specifies the alignment of the selected replaced element's contents within the element's box. Areas of the box which aren't covered by the replaced element's object will show the element's background.</li>
+<li><code>object-fit</code> property is used to specify how an <code>&lt;img&gt;</code> should be resized to fit its container. <code>fill</code> is default, which means the image is resized to fill the given dimension.</li>
+<li><code>object-position</code> is used together with <code>object-fit</code> to specify how an <code>&lt;img&gt;</code> should be positioned with x/y coordinates inside its "own content box".</li>
 <li><code>box-sizing: border-box</code> will make the size of the content box equal to 0. In other words, we don’t see the image, but we see the background color since it covers the padding area.</li>
 </ul>
