--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -85,6 +85,7 @@ top: true</p>
 <p>Awesome Web Apps that work without login: <a href="https://github.com/aviaryan/awesome-no-login-web-apps">https://github.com/aviaryan/awesome-no-login-web-apps</a></p>
 <p>A powerful media downloader with no bullshit: <a href="https://cobalt.tools">https://cobalt.tools</a></p>
 <p>A high-performance HTTP benchmarking tool written in Golang: <a href="https://github.com/six-ddc/plow">https://github.com/six-ddc/plow</a></p>
+<p>An initiative to improve JS packages performance: <a href="https://e18e.dev">https://e18e.dev</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -155,6 +156,7 @@ top: true</p>
 <p>Comlink makes WebWorkers enjoyable: <a href="https://github.com/GoogleChromeLabs/comlink">https://github.com/GoogleChromeLabs/comlink</a></p>
 <p>Web component JS frameworks overview by their syntax and features: <a href="https://component-party.dev">https://component-party.dev</a></p>
 <p>Open Source Tailwind components tailored for your AI and GPT: <a href="https://github.com/LangbaseInc/langui">https://github.com/LangbaseInc/langui</a></p>
+<p>Converting any layout you have to drag-to-swap layout: <a href="https://github.com/TahaSh/swapy">https://github.com/TahaSh/swapy</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -165,6 +167,7 @@ top: true</p>
 <p>Build your own React: <a href="https://pomb.us/build-your-own-react">https://pomb.us/build-your-own-react</a></p>
 <p>A collection of React hooks from the ui.dev team: <a href="https://usehooks.com">https://usehooks.com</a></p>
 <p>React hook library, ready to use, written in Typescript: <a href="https://github.com/juliencrn/usehooks-ts">https://github.com/juliencrn/usehooks-ts</a></p>
+<p>50 react hooks from scratch: <a href="https://github.com/tigerabrodi/50-react-hooks">https://github.com/tigerabrodi/50-react-hooks</a></p>
 <p>How styled-components works: <a href="https://medium.com/styled-components/how-styled-components-works-618a69970421">https://medium.com/styled-components/how-styled-components-works-618a69970421</a></p>
 <p>Start developing websites like it's 2025: <a href="https://react2025.com">https://react2025.com</a></p>
 <p>Up and Running with Remix: <a href="https://egghead.io/courses/up-and-running-with-remix-b82b6bb6">https://egghead.io/courses/up-and-running-with-remix-b82b6bb6</a></p>
@@ -249,6 +252,7 @@ top: true</p>
 <p>Fast AI voice assistant: <a href="https://github.com/ai-ng/swift">https://github.com/ai-ng/swift</a></p>
 <p>Starter project for the Vercel AI SDK RAG guide: <a href="https://github.com/vercel/ai-sdk-rag-starter">https://github.com/vercel/ai-sdk-rag-starter</a></p>
 <p>Build AI apps locally that can do document Q&amp;A: <a href="https://github.com/ykhli/local-ai-stack">https://github.com/ykhli/local-ai-stack</a></p>
+<p>Anthropic's educational courses: <a href="https://github.com/anthropics/courses">https://github.com/anthropics/courses</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
