--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -53,6 +53,8 @@ for (let i = 0; i &lt; all.length; i++) {
   }
 }
 </code></pre>
+<blockquote><p><code>getBoundingClientRect</code> returns a <code>DOMRect</code> object which is the smallest rectangle which contains the entire element, including its padding and border-width. The left, top, right, bottom, x, y, width, and height properties describe the position and size of the overall rectangle in pixels. Properties other than width and height are relative to the top-left of the viewport.</p>
+</blockquote>
 </li>
 <li><p>A long word or link can easily cause horizontal overflow (scrolling). The solution is to use <code>overflow-wrap: break-word</code>. It’s worth mentioning that the property has been renamed from <code>word-wrap</code> to <code>overflow-wrap</code>.</p>
 </li>
@@ -135,6 +137,26 @@ body:after {
 <blockquote><p>There’s a lot of advantages to grid, like <code>minmax()</code>/<code>repeat()</code> functions. Grid is also required for any 2D layout as flex can’t handle that, and it tends to be better when you have more intentionally defined values for rows and/or columns. Also, you get the <code>fr</code> unit which is really handy.</p>
 </blockquote>
 </li>
+<li><p>The <code>grid-template-areas</code> property specifies areas within the grid layout (limited to rectangular grid areas). Once the template areas are defined, we can reference them in CSS and assign each named area to its designated element by using the <code>grid-area</code> property.</p>
+<pre><code class="lang-css">.page {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-areas:
+    "aside main"
+    "footer footer";
+  gap: 1rem;
+}
+.aside {
+  grid-area: aside;
+}
+.main {
+  grid-area: main;
+}
+.footer {
+  grid-area: footer;
+}
+</code></pre>
+</li>
 <li><p>Have you ever wondered why padding is inconsistent above and below text elements? Each font has a different <code>line-height</code> and that comes with a different spacing above and below the text. To fix that, we can add a fake element next to the button’s TextNode, and when a pseudo-element is placed next to it, we can use <code>vertical-align: middle</code> to center both. This is a much better solution than setting the different top and bottom spacing values.</p>
 <pre><code class="lang-css">.button:before {
   content: "";
@@ -146,7 +168,7 @@ body:after {
 </li>
 <li><p>A dialog is a component in a web page or app that usually contains an action or some task to perform. Dialogs have a role of <code>dialog</code>, which the browser will assign automatically for you when you use the <code>&lt;dialog&gt;</code> element. You can also create dialogs with ARIA: apply <code>role="dialog"</code> to an element like <code>&lt;div&gt;</code>. If it is a modal dialog, add <code>aria-modal="true"</code> when it shows, and remove it when it is dismissed. Dialogs can be modal (when shown with <code>dialog.showModal()</code>) or non modal (when shown with <code>dialog.show()</code>). When <code>&lt;dialog&gt;</code>s are modal, the browser will treat the content outside of the dialog as inert, and prevent keyboard focus from reaching web content outside of the dialog. If a <code>&lt;dialog&gt;</code> is not modal, the other content is not treated as inert. Browsers will close modal dialogs when users press <code>Escape</code>. Non-modal dialogs don't get this default behaviour, developers can add it where it makes sense. Check out the <a href="https://talks.hiddedevries.nl/G9mATs/slides">slides</a> about how to build dialogs and popovers.</p>
 </li>
-<li><p>CSS <code>unset</code> will remove all properties set directly on the matched element, and revert to inheriting from the cascade - like a parent element or <code>&lt;body&gt;</code> (if the property naturally inherits from its parent); <code>inherit</code> is pretty straight-forward that inherits all defined properties from its parent element. <code>revert</code> will set the property to the user agent stylesheet value — AKA the default browser style. <code>initial</code> is the nuclear option. This will set the value back to the element’s CSS specification value, which means it’s gonna remove the style all together.</p>
+<li><p>CSS <code>unset</code> will remove all properties set directly on the matched element, and revert to inheriting from the cascade - like a parent element or <code>&lt;body&gt;</code> (if the property naturally inherits from its parent); <code>inherit</code> is pretty straight-forward that inherits all defined properties from its parent element. <code>revert</code> will set the property to the user agent stylesheet value — AKA the default browser style. <code>initial</code> is the nuclear option. This will reset a CSS property as if no CSS rules had been written for that value, which means it’s gonna remove the style all together.</p>
 <pre><code class="lang-html">&lt;!-- What color is the &lt;p&gt; tag’s text? --&gt;
 &lt;!-- The answer is red since unset “unsets” the style of the p tag, 
 so it inherits from its parent – body. --&gt;
@@ -188,12 +210,6 @@ html {
 }
 </code></pre>
 <p>&lt;img alt="stack-elements-with-grid" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/stack-elements-grid.png" width="650" /&gt;</p>
-</li>
-<li><p>An easy way to add a gradient overlay above an existing background. The <code>border-image</code> property is set to use a linear gradient as the border image, and the <code>fill</code> value specifies that the image should fill the entire border area without being sliced.</p>
-<pre><code class="lang-css">.overlay {
-  border-image: fill 0 linear-gradient(#0003, #000);
-}
-</code></pre>
 </li>
 <li><p>8-digit hex notation (#RRGGBBAA): The first 6 digits are interpreted identically to the 6-digit notation. The last pair of digits, interpreted as a hexadecimal number, specifies the alpha channel of the color, where <code>00</code> represents a fully transparent color and <code>ff</code> represent a fully opaque color. Btw, 4-digit notation (#RGBA) is a shorter variant of the 8-digit notation. If there is only one number, it is duplicated: <code>1</code> means <code>11</code>, <code>c</code> means <code>cc</code>.</p>
 </li>
