--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -14,7 +14,7 @@ tags: [js, web]</p>
 </blockquote>
 <ul>
 <li>The Promise returned from <code>fetch()</code> <strong>won’t reject on HTTP error status even if the response is an HTTP 404 or 500</strong>. Instead, it will resolve normally and only reject on network failure or if anything prevented the request from completing. So a <code>then()</code> handler must check the <code>Response.ok</code> or <code>Response.status</code> properties.</li>
-<li><code>fetch()</code> won’t send cookies, unless you set the credentials in init option. To cause browsers to send credentials in a cross-origin call, add <code>credentials: 'include'</code>.</li>
+<li>To make a fetch request with cookies, set the credentials in init option. <code>credentials: 'include'</code> means always include credentials, even cross-origin. If a cookie's SameSite attribute is set to <code>Strict</code> or <code>Lax</code>, then the cookie will not be sent cross-site, even if credentials is set to include.</li>
 <li>CORS mode is enabled by default in <code>fetch()</code>.</li>
 </ul>
 <h3>Init options</h3>
