--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -1,27 +1,26 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/frontend-interview.md">仓库源文</a>，<a href="https://kexizeroing.github.io/frontend-interview">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Frontend interview questions"
 slug: frontend-interview
 description: ""
 added: ""
 top: true
-order: 5
-updatedDate: "Apr 7 2024"</h2>
+order: 5</p>
+<h2>updatedDate: "Apr 7 2024"</h2>
 <p>更全面的准备可以参考:</p>
 <ul>
-<li>https://hzfe.github.io/awesome-interview</li>
-<li>https://github.com/Sunny-117/js-challenges</li>
-<li>https://github.com/tigerabrodi/data-structures-and-algorithms-javascript</li>
+<li><a href="https://hzfe.github.io/awesome-interview">https://hzfe.github.io/awesome-interview</a></li>
+<li><a href="https://github.com/Sunny-117/js-challenges">https://github.com/Sunny-117/js-challenges</a></li>
+<li><a href="https://blog.algomooc.com">https://blog.algomooc.com</a></li>
 </ul>
 <hr/>
 <ol>
 <li>假设现在有 20 个异步请求需要发送，但由于某些原因，我们必须将同一时刻的并发请求数量控制在 3 个以内。实现一个并发请求函数，要求最大并发数 maxNum，每当有一个请求返回，就留下一个空位，可以增加新的请求。当所有请求完成后，结果按照 urls 里面的顺序依次输出。</li>
 </ol>
-<blockquote>
-<p>当同时发送上千个请求时，浏览器会变的明显卡顿，虽然这样发送可以更快的获取数据，但会带来不好的用户体验，所以一个解决方案是给并发添加最大数量限制。如果是 http1.1，浏览器会有默认的并发限制，并不需要我们处理这个问题，比如 Chrome 中并发数量是 6 个，所以这个问题的成立是建立在 http2 的基础上。</p>
+<blockquote><p>当同时发送上千个请求时，浏览器会变的明显卡顿，虽然这样发送可以更快的获取数据，但会带来不好的用户体验，所以一个解决方案是给并发添加最大数量限制。如果是 http1.1，浏览器会有默认的并发限制，并不需要我们处理这个问题，比如 Chrome 中并发数量是 6 个，所以这个问题的成立是建立在 http2 的基础上。</p>
 </blockquote>
-<pre><code class="language-js">const concurrencyRequest = (urls, maxNum) =&gt; {
+<pre><code class="lang-js">const concurrencyRequest = (urls, maxNum) =&gt; {
   return new Promise((resolve) =&gt; {
     if (urls.length === 0) {
       resolve([]);
@@ -68,31 +67,31 @@ concurrencyRequest(urls, 3).then(res =&gt; {
   console.log(res);
 })
 </code></pre>
-<p><code>Promise.all</code> 用来并发处理异步任务，但是并发数有时候需要限制，多个并发请求可能会对服务端产生压力，<a href="https://github.com/sindresorhus/p-limit">p-limit</a> 这个库就是用来限制并发数的。核心原理就是在一个循环中，从请求池中取出请求并发送，直到当前并发请求数 current 达到最大并发数或请求池 queue 变为空。对于每个出队的请求，它首先增加 current 的值，然后调用函数来发送请求。当请求完成后，它会减少 current 的值并再次调用出队函数，处理下一个请求。类似的库有很多，可以看看 https://github.com/sindresorhus/promise-fun</p>
-<ol start="2">
-<li>Implement <code>Promise.all</code> by yourself.</li>
+<p><code>Promise.all</code> 用来并发处理异步任务，但是并发数有时候需要限制，多个并发请求可能会对服务端产生压力，<a href="https://github.com/sindresorhus/p-limit">p-limit</a> 这个库就是用来限制并发数的。核心原理就是在一个循环中，从请求池中取出请求并发送，直到当前并发请求数 current 达到最大并发数或请求池 queue 变为空。对于每个出队的请求，它首先增加 current 的值，然后调用函数来发送请求。当请求完成后，它会减少 current 的值并再次调用出队函数，处理下一个请求。类似的库有很多，可以看看 <a href="https://github.com/sindresorhus/promise-fun">https://github.com/sindresorhus/promise-fun</a></p>
+<ol>
+<li>Implement <code>Promise.all</code> by yourself.
+<code>``js
+Promise._all = function (promises) {
+return new Promise((resolve, reject) =&gt; {
+ let counter = 0;
+ const result = [];
+ for (let i = 0; i &lt; promises.length; i++) {
+   // Use</code>Promise.resolve(promises[i])<code>instead of</code>promises[i].then()<code>, 
+   // because</code>promises[i]<code>could be a non-promise so it won’t have</code>.then()` method
+   Promise.resolve(promises[i]).then(res =&gt; {<pre><code> result[i] = res;
+ counter += 1;
+ if (counter === promises.length) {
+   resolve(result);
+ }
+</code></pre>
+   }, err =&gt; {<pre><code> reject(err);
+</code></pre>
+   });
+ }
+});
+};</li>
 </ol>
-<pre><code class="language-js">Promise._all = function (promises) {
-  return new Promise((resolve, reject) =&gt; {
-    let counter = 0;
-    const result = [];
-    for (let i = 0; i &lt; promises.length; i++) {
-      // Use `Promise.resolve(promises[i])` instead of `promises[i].then()`, 
-      // because `promises[i]` could be a non-promise so it won’t have `.then()` method
-      Promise.resolve(promises[i]).then(res =&gt; {
-        result[i] = res;
-        counter += 1;
-        if (counter === promises.length) {
-          resolve(result);
-        }
-      }, err =&gt; {
-        reject(err);
-      });
-    }
-  });
-};
-
-// Also implement `Promise.resolve` and `Promise.reject`
+<p>// Also implement <code>Promise.resolve</code> and <code>Promise.reject</code>
 Promise._resolve = function (value) {
   if (value instanceof Promise) {
     return value;
@@ -101,16 +100,14 @@ Promise._resolve = function (value) {
       resolve(value);
     });
   }
-};
-
-Promise._reject = function (reason) {
+};</p>
+<p>Promise._reject = function (reason) {
   return new Promise((resolve, reject) =&gt; reject(reason));
-}
-</code></pre>
-<ol start="3">
-<li>Implement calling click event listener only once without using <code>{once: true}</code>.</li>
-</ol>
-<pre><code class="language-js">function clickOnce(el, cb) {
+}</p>
+<pre><code>
+3. Implement calling click event listener only once without using `{once: true}`.
+```js
+function clickOnce(el, cb) {
   const cb2 = () =&gt; {
     cb();
     el.removeEventListener('click', cb2, false);
@@ -120,37 +117,35 @@ Promise._reject = function (reason) {
 
 clickOnce($0, () =&gt; console.log('click'));
 </code></pre>
-<ol start="4">
-<li>Use setTimeout to invoke a function multiple times in the fixed interval.</li>
+<ol>
+<li><p>Use setTimeout to invoke a function multiple times in the fixed interval.
+```js
+function repeat(func, times, ms, immediate) {
+let count = 0;</p>
+<p>function inner(...args) {
+ count++;<br/>
+ if (count === 1 &amp;&amp; immediate) {
+   func.call(null, ...args);
+ }
+ if (count &gt;= times) {
+   return;
+ }
+ setTimeout(() =&gt; {
+   inner.call(null, ...args);
+   func.call(null, ...args);
+ }, ms);
+}</p>
+<p>return inner;
+}</p>
+</li>
 </ol>
-<pre><code class="language-js">function repeat(func, times, ms, immediate) {
-  let count = 0;
-
-  function inner(...args) {
-    count++;  
-    if (count === 1 &amp;&amp; immediate) {
-      func.call(null, ...args);
-    }
-    if (count &gt;= times) {
-      return;
-    }
-    setTimeout(() =&gt; {
-      inner.call(null, ...args);
-      func.call(null, ...args);
-    }, ms);
-  }
-  
-  return inner;
-}
-
-// test
+<p>// test
 const repeatFunc = repeat(console.log, 4, 3000, true);
-repeatFunc("hello"); 
-</code></pre>
-<ol start="5">
-<li>Implement the render function to convert the virtual dom JSON to real DOM.</li>
-</ol>
-<pre><code class="language-js">function render(vnode) {
+repeatFunc("hello");</p>
+<pre><code>
+5. Implement the render function to convert the virtual dom JSON to real DOM.
+```js
+function render(vnode) {
   const { tag, props, children } = vnode;
   const el = document.createElement(tag);
 
@@ -178,33 +173,34 @@ repeatFunc("hello");
   return el;
 }
 </code></pre>
-<ol start="6">
-<li>How to add two big integers in js?</li>
-</ol>
-<pre><code class="language-js">function add(A, B) {
-  const AL = A.length
-  const BL = B.length
-  const ML = Math.max(AL, BL)
+<ol>
+<li><p>How to add two big integers in js?</p>
+<pre><code class="lang-js">function add(A, B) {
+const AL = A.length
+const BL = B.length
+const ML = Math.max(AL, BL)
 
-  let carry = 0, sum = ''
+let carry = 0, sum = ''
 
-  for (let i = 1; i &lt;= ML; i++) {
-    let a = +A.charAt(AL - i)
-    let b = +B.charAt(BL - i)
+for (let i = 1; i &lt;= ML; i++) {
+ let a = +A.charAt(AL - i)
+ let b = +B.charAt(BL - i)
 
-    let t = carry + a + b
-    carry = Math.floor(t / 10)
-    t %= 10
+ let t = carry + a + b
+ carry = Math.floor(t / 10)
+ t %= 10
 
-    sum = (i === ML &amp;&amp; carry)
-      ? carry * 10 + t + sum
-      : t + sum
-  }
+ sum = (i === ML &amp;&amp; carry)
+   ? carry * 10 + t + sum
+   : t + sum
+}
 
-  return sum
+return sum
 }
 </code></pre>
-<pre><code class="language-js">const max = BigInt(Number.MAX_SAFE_INTEGER);
+</li>
+</ol>
+<pre><code class="lang-js">const max = BigInt(Number.MAX_SAFE_INTEGER);
 const two = 2n;
 const result = max + two;
 </code></pre>
