--- a/kexizeroing.github.io/Intro to Authorization and Authentication.html
+++ b/kexizeroing.github.io/Intro to Authorization and Authentication.html
@@ -84,13 +84,10 @@ console.log(decoded);
  */
 </code></pre>
 <p>In practice, when a user wants to log in, the app sends an request to the authorization server. The user’s credentials are verified by the authorization server, and if everything checks out, the authorization server issues an ID token to the application. The client application then decodes the ID token (which is a JWT) and verifies it. This includes validating the signature, and we must also verify the claims. Once we’ve established the authenticity of the ID token, the user is authenticated. We also now have access to the identity claims and know who this user is.</p>
-<blockquote><p>Check out a practical example that shows session based authentication through cookies in the Next.js App Router: <a href="https://github.com/balazsorban44/auth-poc-next">https://github.com/balazsorban44/auth-poc-next</a></p>
-<p><a href="https://github.com/vercel/next.js/tree/canary/examples/auth">next-auth</a> is a complete open-source authentication solution for Next.js applications.</p>
-</blockquote>
 <h3>Accessing APIs with Access Tokens</h3>
 <p>Access tokens are used for granting access to resources. Unlike ID tokens, access tokens have no defined format. They do not have to be (and aren’t necessarily) JWT. However, many identity solutions use JWTs for access tokens because the format enables validation.</p>
 <p>Access tokens are opaque to the client. They can change at any time. They should have short expiration times, so a user may frequently get new ones. <em>Refresh tokens are used to obtain a renewed access token without having to re-authenticate the user.</em> The client application should never contain code that relies on the contents of the access token.</p>
-<p>The app sends an authorization request to the authorization server, requesting an access token to call an API. Then when our app wants to interact with the API, we attach the access token to the request header (Authorization header with the Bearer Token). This token has some important information in it, such as:</p>
+<p>The app sends an authorization request to the authorization server, requesting an access token to call an API. Then when our app wants to interact with the API, we attach the access token to the request header <em>(Authorization header with the Bearer Token)</em>. This token has some important information in it, such as:</p>
 <ul>
 <li>sub: (my MyCalApp user ID)</li>
 <li>aud: MyCalAppAPI (audience stating this token is intended for the MyCalApp API)</li>
