--- a/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
+++ b/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
@@ -1,24 +1,24 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/js-prototype-class-proxy.md">仓库源文</a>，<a href="https://kexizeroing.github.io/js-prototype-class-proxy">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "JavaScript prototype chain, Class and Proxy"
 slug: js-prototype-class-proxy
 description: ""
 added: "Aug 4 2020"
-tags: [js]
-updatedDate: "Apr 2 2024"</h2>
+tags: [js]</p>
+<h2>updatedDate: "Apr 2 2024"</h2>
 <h2>The prototype chain</h2>
 <p>JavaScript is a bit confusing for developers experienced in class-based languages like Java or C++, as it is dynamic and does not provide a class implementation (the <code>class</code> keyword is introduced in ES2015, but is syntactical sugar, JavaScript remains prototype-based).</p>
 <p>When it comes to inheritance, JavaScript only has one construct: objects. Each object has a private property which holds a link to another object called its <strong>prototype</strong>. That prototype object has a prototype of its own, and so on until an object is reached with <code>null</code> as its prototype. By definition, <code>null</code> has no prototype, and acts as the final link in this prototype chain.</p>
 <p>When trying to access a property of an object, the property will not only be sought on the object but on the prototype of the object, the prototype of the prototype, and so on until either a property with a matching name is found or the end of the prototype chain is reached.</p>
 <p>Following the ECMAScript standard, the notation <code>someObject.[[Prototype]]</code> is used to designate the prototype of <code>someObject</code>. <strong>Since ECMAScript 2015, the <code>[[Prototype]]</code> is accessed using the accessors <code>Object.getPrototypeOf()</code> and <code>Object.setPrototypeOf()</code>. This is equivalent to the JavaScript property <code>__proto__</code> which is non-standard but implemented by many browsers</strong>. It should not be confused with the <code>func.prototype</code> property of functions, which specifies the <code>[[Prototype]]</code> to be assigned to all instances of objects created by the given function when used as a constructor. The reference to the prototype object is copied to the internal <code>[[Prototype]]</code> property of the new instance.</p>
 <ul>
-<li>All functions have a special property named <code>prototype</code>, but there is one exception that arrow function doesn't have a default prototype property.</li>
+<li>All functions have a special property named <code>prototype</code>, but there is one exception that arrow function doesn't have a default prototype property. </li>
 <li>The native prototypes should never be extended unless it is for the sake of compatibility with newer JavaScript features.</li>
 <li>Changing the <code>[[Prototype]]</code> of an object is a very slow operation in JavaScript engines, so you should avoid setting the <code>[[Prototype]]</code> of an object by using <code>Object.setPrototypeOf()</code>. Instead, create a new object with the desired <code>[[Prototype]]</code> using <code>Object.create()</code>.</li>
 <li>To check whether an object has a property defined on itself and not somewhere on its prototype chain, it is necessary to use the <code>Object.prototype.hasOwnProperty()</code> method.</li>
 </ul>
-<pre><code class="language-js">// when you call
+<pre><code class="lang-js">// when you call
 var o = new Foo();
 
 // JavaScript actually just does
@@ -69,7 +69,7 @@ Object.setPrototypeOf(d, foo.prototype);
 <p>JavaScript classes are primarily syntactical sugar over existing prototype-based inheritance. The class syntax does not introduce a new object-oriented model to JavaScript. <strong>The body of a class is executed in strict mode</strong>.</p>
 <p>Classes are in fact "special functions", and just as you can define function expressions and function declarations, the class syntax also includes class expressions and class declarations. An important difference between function declarations and class declarations is that function declarations are hoisted and class declarations are not.</p>
 <p>The constructor method is a special method for creating and initializing an object created with a class. There can only be one special method with the name "constructor" in a class. A constructor can use the <code>super</code> keyword to call the constructor of the parent class. If you do not specify a constructor method, a default constructor is used.</p>
-<pre><code class="language-js">// class declaration
+<pre><code class="lang-js">// class declaration
 class Rectangle {
   constructor(height, width) {
     this.height = height;
@@ -104,13 +104,12 @@ Animal.prototype.eat = function () {}
 </code></pre>
 <h3>Class field</h3>
 <p>It will allow you to add instance properties directly as a property on the class without having to use the constructor method. Class properties are public by default. Sometimes when you’re building a class, you want to have private values that aren’t exposed to the outside world. Historically because we’ve lacked the ability to have truly private values, we’ve marked them with an underscore (but it is only a convention). According to the new proposal, you can create a private field using a hash # prefix. It is a syntax error to refer to # names from outside of the class. JavaScript is able to perform this compile-time check because of the special hash identifier syntax, making it different from normal properties on the syntax level.</p>
-<blockquote>
-<p>Note that code run in the Chrome console can access private properties outside the class. This is a DevTools-only relaxation of the JavaScript syntax restriction.</p>
+<blockquote><p>Note that code run in the Chrome console can access private properties outside the class. This is a DevTools-only relaxation of the JavaScript syntax restriction.</p>
 </blockquote>
-<pre><code class="language-js">class Car {
+<pre><code class="lang-js">class Car {
   // private field, # as a part of the property name
   #milesDriven = 0  
-  
+
   drive(distance) {
     this.#milesDriven += distance
   }
@@ -127,14 +126,29 @@ tesla.#milesDriven     // Invalid
 <h3>Class static fields</h3>
 <p>Public static fields are useful when you want a field to exist only once per class, not on every class instance you create. Static methods aren't called on instances of the class. Instead, they're called on the class itself.</p>
 <p>Static methods are not directly accessible using <code>this</code> keyword from non-static methods. You need to call them using the class name: <code>CLASSNAME.STATIC_METHOD_NAME()</code> or by calling the method as a property of the constructor: <code>this.constructor.STATIC_METHOD_NAME()</code>.</p>
-<pre><code class="language-js">class ClassWithStaticField {
+<pre><code class="lang-js">class Singleton {
+  constructor() {
+    if (Singleton.instance) {
+      return Singleton.instance;
+    }
+    this.value = Math.random();
+    Singleton.instance = this;
+    return this;
+  }
+
+  getValue() {
+    return this.value;
+  }
+}
+</code></pre>
+<pre><code class="lang-js">class ClassWithStaticField {
   static staticField = 'static field';
 
   constructor() {
     console.log(ClassWithStaticField.staticMethod()); 
     console.log(this.constructor.staticMethod()); 
   }
-  
+
   static staticMethod() {
     return 'Static method has been called';
   }
@@ -145,14 +159,13 @@ tesla.#milesDriven     // Invalid
 }
 
 console.log(ClassWithStaticField.staticField);
-ClassWithStaticField.staticMethod(); 
+ClassWithStaticField.staticMethod();
 </code></pre>
-<blockquote>
-<p>JavaScript doesn’t allow class constructors to be <code>async</code>. We have to do any async actions outside of a constructor. Static class methods can help with this.</p>
+<blockquote><p>JavaScript doesn’t allow class constructors to be <code>async</code>. We have to do any async actions outside of a constructor. Static class methods can help with this.</p>
 </blockquote>
 <h3>Class getter and setter</h3>
 <p>Add methods prefixed with <code>get</code> or <code>set</code> to create a getter and setter, which are executed based on what you are doing: accessing the variable, or modifying its value. If you only have a getter, the property cannot be set; If you only have a setter, you can change the value but not access it.</p>
-<pre><code class="language-js">class Circle {
+<pre><code class="lang-js">class Circle {
   constructor (radius) {
     this.radius = radius;
   }
@@ -160,7 +173,7 @@ ClassWithStaticField.staticMethod();
   calcArea() {
     return Math.PI * this.radius * this.radius;
   }
- 
+
   get area() {
     return this.calcArea();
   }
@@ -175,7 +188,7 @@ console.log(circle.area);
 </code></pre>
 <h3>Class inheritance</h3>
 <p>A class can extend another class or extend traditional function-based "classes". The <code>super</code> keyword is used to reference the parent class. Private fields are not inherited by subclasses. To fix this, you can add a getter method to the Parent class that returns the value of the private field.</p>
-<pre><code class="language-js">class Square extends Polygon {
+<pre><code class="lang-js">class Square extends Polygon {
   constructor(length) {
     // calls parent class constructor
     super(length);
@@ -205,7 +218,7 @@ class C extends A {
 </code></pre>
 <h3>new.target</h3>
 <p>It lets you detect whether a function or constructor was called using the <code>new</code> operator. Normally the left-hand side of the dot is the object on which property access is performed, but here <code>new</code> is not an object. <strong>If constructors and functions invoked using the <code>new</code> operator, <code>new.target</code> returns a reference to the constructor or function. In normal function calls, <code>new.target</code> is undefined.</strong> In arrow functions, <code>new.target</code> is inherited from the surrounding scope.</p>
-<pre><code class="language-js">function Foo() {
+<pre><code class="lang-js">function Foo() {
   if (!new.target) throw 'Foo() must be called with new';
   console.log('Foo instantiated with new');
 }
@@ -227,23 +240,23 @@ const b = new B();  // logs "B"
 <h2>Proxy and Reflect</h2>
 <p>The <strong>Proxy</strong> object enables you to create a proxy for another object, which can intercept and redefine fundamental operations for that object. Proxy objects are commonly used to log property accesses, validate, format, or sanitize inputs, and so on.</p>
 <p>Handler functions are sometimes called traps, because they trap calls to the underlying target object. It's important to realize that all interactions with an object eventually boils down to the invocation of one of these internal methods, and that they are all customizable through proxies.</p>
-<pre><code>[[GetPrototypeOf]]    -&gt;	getPrototypeOf()
-[[SetPrototypeOf]]    -&gt;	setPrototypeOf()
-[[IsExtensible]]	    -&gt;  isExtensible()
-[[PreventExtensions]]	-&gt; 	preventExtensions()
-[[GetOwnProperty]]		-&gt;  getOwnPropertyDescriptor()
-[[DefineOwnProperty]]	-&gt;  defineProperty()
-[[HasProperty]]	      -&gt; 	has()
-[[Get]]	              -&gt;  get()
-[[Set]]		            -&gt;  set()
-[[Delete]]		        -&gt;  deleteProperty()
-[[OwnPropertyKeys]]		-&gt;  ownKeys()
-[[Call]]		          -&gt;  apply()
-[[Construct]]	        -&gt;  construct()
+<pre><code>[[GetPrototypeOf]]    -&gt;    getPrototypeOf()
+[[SetPrototypeOf]]    -&gt;    setPrototypeOf()
+[[IsExtensible]]        -&gt;  isExtensible()
+[[PreventExtensions]]   -&gt;  preventExtensions()
+[[GetOwnProperty]]      -&gt;  getOwnPropertyDescriptor()
+[[DefineOwnProperty]]   -&gt;  defineProperty()
+[[HasProperty]]       -&gt;    has()
+[[Get]]               -&gt;  get()
+[[Set]]                 -&gt;  set()
+[[Delete]]              -&gt;  deleteProperty()
+[[OwnPropertyKeys]]     -&gt;  ownKeys()
+[[Call]]                  -&gt;  apply()
+[[Construct]]           -&gt;  construct()
 </code></pre>
 <p>The <strong>Reflect</strong> namespace object contains static methods for invoking interceptable JavaScript object internal methods. The methods are the same as those of proxy handlers. All properties and methods of Reflect are static <em>(just like the Math object)</em>.</p>
 <p>The major use case of Reflect is to provide default forwarding behavior in Proxy handler traps. The Reflect API is used to invoke the corresponding internal method. For example, you create a proxy with a <code>deleteProperty</code> trap that intercepts the <code>[[Delete]]</code> internal method. <code>Reflect.deleteProperty()</code> is used to invoke the default <code>[[Delete]]</code> behavior on targetObject directly. You can replace it with <code>delete</code>, but using Reflect saves you from having to remember the syntax that each internal method corresponds to.</p>
-<pre><code class="language-js">const person = {
+<pre><code class="lang-js">const person = {
   name: "John Doe",
   age: 42,
 };
@@ -258,7 +271,7 @@ const personProxy = new Proxy(person, {
   },
 });
 </code></pre>
-<pre><code class="language-js">// time machine
+<pre><code class="lang-js">// time machine
 function createTimeMachine(data, onUpdate) {
   return new Proxy(
     {
