--- a/kexizeroing.github.io/Mac terminal.html
+++ b/kexizeroing.github.io/Mac terminal.html
@@ -17,6 +17,8 @@ tags: [system]</p>
 </blockquote>
 <p>A shell protects the user from the dangerous, complicated parts of the system and abstracts differences from one system to the other. Another way of looking at it, is that a shell protects the vulnerable, fragile parts of the system from the user. Technically, GUI which display files, folders and programs as icons in windows such as macOS, Windows, and even iOS and Android are also shells, since they shield the system internals from the user and vice versa. However, usually the term 'shell' is used for interfaces where the user has to type commands, or CLI. Command Line shells commonly have two major roles. The first is to interpret and execute commands entered in an interactive prompt and deliver the results back to the user. The second role is to interpret and process list of commands called scripts.</p>
 <p>Many Unix and Unix-like systems have <code>sh</code> as well as bash and other shells available. <code>sh</code> goes back to the very early UNIX shells. <code>sh</code> has survived because it serves as the lowest common standard for shell scripting. These standards are defined in the POSIX specification. When you have to build scripts that need to run across many different flavors and versions of Unix where you cannot rely on bash being present, then conforming to <code>sh</code> might be necessary. (bash is also POSIX compliant, but it has more features). As a macOS administrator you should always choose <code>/bin/bash</code> over <code>/bin/sh</code>. You can check all the available shells in macOS <code>cat /etc/shells</code>, show the current shell being used <code>echo $SHELL</code>, and use <code>chsh -s /bin/zsh</code> to change the current interactive shell.</p>
+<blockquote><p>POSIX (Portable Operating System Interface) is a family of standards, specified by the IEEE, to clarify and make uniform the application programming interfaces provided by Unix operating systems. When you write your programs to rely on POSIX standards, you can be pretty sure to be able to port them easily among a large family of Unix derivatives.</p>
+</blockquote>
 <h2>Finding Commands</h2>
 <p>All commands are files in the file system. They have a special file setting which makes them executable, so the system can interpret it as commands. If you want to know where a given command resides, you can use the <code>which</code> command. When you enter a command without a path such as <code>ls</code>, bash will start looking for the command executable in <code>/usr/local/bin</code>, then in <code>/usr/bin</code>, and then in <code>/bin</code> (defined in <code>PATH</code>). When it finds an executable <code>ls</code>, stop looking and execute that.</p>
 <h2>Terminal–Finder Interaction</h2>
@@ -41,7 +43,6 @@ tags: [system]</p>
 <p>Once you have recalled a command and want to edit it, you will have to move the cursor. You can use <code>Option + Left/Right Arrow</code> to move word by word. You can use <code>Ctrl + A</code> to jump to the beginning of the line and <code>Ctrl + E</code> to jump to the end. <code>Ctrl + U</code> will clear the entire current line. <code>Ctrl + W</code> delete the word before the cursor. And you can option-click with the mouse pointer on a character in the command line to move the cursor there.</p>
 <blockquote><p>Readline is a GNU library that gets a line from a user with editing. The bash shell is probably the most famous readline user (when you use <code>Ctrl+R</code> to search your history in bash, that feature actually comes from readline), but there are TONS of programs that use it – for example psql, irb, python3, etc.</p>
 </blockquote>
-<p>The configuration for the prompt is stored in the <code>PS1</code> environment variable. You can see the default value by <code>echo $PS1</code>.</p>
 <h2>Escaping Characters</h2>
 <p>The escape character in bash is the backslash <code>\</code>. A character that follows a backslash will be treated with no special meaning. For a directory named <code>Project (Old &amp; New)</code>, you would type <code>cd Project\ \(Old\ \&amp;\ New\)</code>. Since escaping characters can make the path quite unreadable, you can also place the name in single quotes <code>cd 'Project (Old &amp; New)'</code>. Any character in single quotes is used as is, with no special function. (you cannot use single quotes when the filename contains a single quote). Tab-completion will escape spaces and other nasty characters automatically.</p>
 <h2>Quoting</h2>
@@ -68,7 +69,6 @@ echo "$HOME"  /home/user1/
 <li><code>tail</code> show the last part of the file.</li>
 <li><code>tail -f</code> show the text appended to the file as the file grows.</li>
 <li><code>less</code> show contents of file one screen at a time. (<code>more</code> is an old utility, just use <code>less</code> and forget about <code>more</code>)</li>
-<li><code>file</code> helps determine the type of a file. The command doesn't take the file extension into account, and instead runs a series of tests to discover the type of file data.</li>
 </ul>
 </blockquote>
 <h2>grep</h2>
@@ -96,7 +96,7 @@ end$    matches the pattern only if the pattern is at the end of the line
 <code>kill -9</code> command sends a kill signal to terminate any process immediately when attached with a PID or a processname. It is a forceful way to kill/terminate a or set of processes. <code>kill -9 &lt;pid&gt; / &lt;processname&gt;</code> sends SIGKILL (9) — Kill signal. This signal cannot be handled (caught), ignored or blocked. Hence, this immediately kill the process without any handling and this can create zombies process.</p>
 </blockquote>
 <h2>bash_profile and bashrc</h2>
-<p>There are two user level files which <code>bash</code> may run when a bash shell starts. <code>~/.bash_profile</code> and <code>~/.bashrc</code>. The usual convention is that <code>.bash_profile</code> will be executed at login shells, i.e. when you ssh into a remote host, it will ask you for user name and password to log in, so it is a login shell. But when you open a terminal, it does not ask for login and you will just get a command prompt. In other versions of Unix or Linux, this will not run the <code>.bash_profile</code> but <code>.bashrc</code>. The underlying idea is that the <code>.bash_profile</code> should be run only when you login, and the <code>.bashrc</code> for every new interactive shell. However, Terminal on macOS does not follow this convention. When Terminal opens a new window, it will run <code>.bash_profile</code>. (Other third-party terminal applications on macOS may follow the precedent set by the Terminal or not.)</p>
+<p>There are two user level files which <code>bash</code> may run when a bash shell starts. <code>~/.bash_profile</code> and <code>~/.bashrc</code>. The usual convention is that <code>.bash_profile</code> will be executed at login shells, i.e. when you ssh into a remote host, it will ask you for user name and password to log in, so it is a login shell. But when you open a terminal, it does not ask for login and you will just get a command prompt. In other versions of Unix or Linux, this will not run the <code>.bash_profile</code> but <code>.bashrc</code>. The underlying idea is that the <code>.bash_profile</code> should be run only when you login, and the <code>.bashrc</code> for every new interactive shell. However, Terminal on macOS does not follow this convention. When Terminal opens a new window, it will run <code>.bash_profile</code>.</p>
 <ul>
 <li>When you are living mostly on macOS and the Terminal, you can create a <code>.bash_profile</code>, ignore all the special cases and be happy.</li>
 <li>If you want to have an approach that is more resilient to other terminal applications and might work across Unix/Linux platforms, put your configuration in <code>.bashrc</code> and source <code>.bashrc</code> from <code>.bash_profile</code>.</li>
@@ -115,7 +115,7 @@ end$    matches the pattern only if the pattern is at the end of the line
 <p>Every script you want to run from the command line should have a shebang as the first line. A shebang looks like this <code>#!/bin/bash</code>. Files are usually identified by certain codes (i.e. magic numbers) in the first few bytes of data. The hex code <code>23 21</code> converts to the ascii characters <code>#!</code> and tells the system that a file is script. After the shebang comes the command that should interpret the script. Generally, any command that can interpret text files can be used. Since the value of the <code>PATH</code> variable is not guaranteed in many contexts that scripts run in, the path needs to be absolute.</p>
 <p>There are environments where you cannot predict the absolute path of a given tool. For example the bash v3.2 shell on macOS is installed by default in <code>/bin/bash</code>. Users can also download and install bash version 4.4 onto their computers. The location for the the bash 4 is usually at <code>/usr/local/bin/bash</code>. Since <code>/usr/local/bin</code> is the first item of the default <code>PATH</code> on macOS, the newer bash 4 will be chosen before the built-in bash 3.2 when the user types bash into their shell. When you use the absoute path to <code>/bin/bash</code> in a shebang, you are ensuring that the provided built-in version of bash will be used. However, there are cases where you want scripts to be run with the user’s preferred tool, rather than a set path. In this case you can use <code>#!/usr/bin/env bash</code>, which will determine the preferred bash tool in the user’s environment and use that to interpret the script.</p>
 <h2>sh and source</h2>
-<p>When you call <code>sh</code>, you initiate a fork (sub-process) that runs a new session of <code>/bin/sh</code>, which is usually a symbolic link to bash. If you launch it using <code>./test.sh</code>, the first line <code>#!/bin/sh</code> would be detected, then it would be exactly the same as <code>/bin/sh ./test.sh</code>. (<code>chmod +x test.sh</code> to make the script executable). It executes shell scripts in a new shell process, so any variables which are assigned will disappear after the script is done. <code>. test.sh</code> or <code>source test.sh</code> will run the commands in the current shell (source is a synonym for dot).</p>
+<p>When you call <code>sh</code>, you initiate a fork (sub-process) that runs a new session of <code>/bin/sh</code>, which is usually a symbolic link to bash. If you launch it using <code>./test.sh</code>, the first line <code>#!/bin/sh</code> would be detected, then it would be exactly the same as <code>/bin/sh ./test.sh</code>. (<code>chmod +x test.sh</code> to make the script executable). It executes shell scripts in a new shell process, so any variables which are assigned will disappear after the script is done. <code>. test.sh</code> or <code>source test.sh</code> will run the commands in the current shell <strong>(<code>source</code> is a synonym for dot)</strong>.</p>
 <p>Similarly, we can tell the OS to always execute a file with node using <code>#!/usr/bin/env node</code>. Here we use the <code>env</code> program to find the node’s path because it’s usually in a more dynamic place, depending on your OS or node version manager.</p>
 <h2>Script arguments</h2>
 <p>A Bash script may take arguments to accomplish a task. Here’s how we can handle them in Bash and Node.js.</p>
@@ -191,8 +191,6 @@ fi
 <p>From macOS Catalina the default shell is zsh. The bash bundled with macOS has been stuck on version 3.2 for a long time now. bash v4 was released in 2009 and bash v5 in January 2019. The reason Apple has not switched to these newer versions is that they are licensed with <code>GPL v3</code>. bash v3 is still <code>GPL v2</code>. zsh, on the other hand, has an MIT-like license, which makes it much more palatable for Apple to include in the system by default.</p>
 <p>Users that have <code>/bin/bash</code> as their default shell on Catalina will see a prompt at the start of each Terminal session stating that zsh is now the recommended default shell. If you want to continue using <code>/bin/bash</code>, you can supress this message by setting <code>export BASH_SILENCE_DEPRECATION_WARNING=1</code>. You can also download and install a newer version of bash yourself. (Custom bash installations reside in a different directory usually <code>/usr/local/bin/bash</code>)</p>
 <p>The first change you will see in zsh is that the prompt looks different. zsh uses the <code>%</code> character as the default prompt (of course you can change that). zsh derives from the Bourne family of shells. Because of this common ancestry, it behaves very similar in day-to-day use. There is an entire eco-system of configuration tools and themes called <code>oh-my-zsh</code> which is very popular.</p>
-<blockquote><p>It's not cool if you don’t display some Git status information in your prompt. Zsh ships with a framework for getting information from version control systems, called <code>vcs_info</code>. It populates a variable for you. This variable can then be used inside your prompt to print information. Learn how to <a href="https://dev.to/cassidoo/customizing-my-zsh-prompt-3417">customize your zsh prompt</a>.</p>
-</blockquote>
 <h2>Hard Links and Symbolic Links</h2>
 <p>Underneath the file system, files are represented by inodes. A file in the file system is basically a link to an inode. When you delete a file, it removes the link to the underlying inode. The inode is only deleted when all links to the inode have been deleted. A hard link (<code>ln &lt;source&gt; &lt;target&gt;</code>) creates another file with a link to the same underlying inode. If the real copy is deleted, the link still works because it accesses the underlying data which the real copy was accessing.</p>
 <p>Symbolic links (i.e. <code>etc -&gt; private/etc</code>) are links to another name in the file system like shortcuts in Windows. <code>/etc</code>, <code>/tmp</code> and <code>/var</code> are standard directories in Unix systems, but in this case these directories are actually located in <code>/private</code>. You can use <code>readlink</code> command to determine where a symbolic links points to. Most operations such as reading or changing are directed to the original, rather than the symbolic link. To create a symbolic link use the <code>ln -s &lt;source&gt; &lt;target&gt;</code> command. The first argument is the path the symbolic link points to. If a symbolic link is deleted, its target remains unaffected. If the target is moved, renamed or deleted, the symbolic link is not automatically updated or deleted, but continues to points to the old target, a non-existing location (the link will not work).</p>
@@ -299,10 +297,6 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <td>系统的环境变量</td>
 </tr>
 <tr>
-<td>cal 2022</td>
-<td>年日历</td>
-</tr>
-<tr>
 <td>ifconfig | grep inet</td>
 <td>IP 地址</td>
 </tr>
@@ -319,17 +313,8 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <td>动态显示 cpu /内存/进程等情况</td>
 </tr>
 <tr>
-<td>df -h</td>
-<td>磁盘使⽤情况及挂载点</td>
-</tr>
-<tr>
 <td>du -sh /dir</td>
 <td>指定某个⽬录的⼤⼩</td>
-</tr>
-<tr>
-<td>du -sh */</td>
-<td>sort -hr</td>
-<td>所有路径按照大小排序</td>
 </tr>
 <tr>
 <td>groups</td>
@@ -360,10 +345,6 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <td>快速启动 http 服务</td>
 </tr>
 <tr>
-<td>netstat -P tcp</td>
-<td>显示特定传输协议的状态</td>
-</tr>
-<tr>
 <td>cat /etc/hosts</td>
 <td>管理 IP 地址和主机名之间的映射</td>
 </tr>
@@ -372,7 +353,7 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <td>DNS 客户机配置文件</td>
 </tr>
 <tr>
-<td>nohup command &amp;</td>
+<td>nohup ping baidu.com &amp;</td>
 <td>使命令永久的在后台执行（不挂断且前台可交互）</td>
 </tr>
 <tr>
