--- a/kexizeroing.github.io/Module bundler clone.html
+++ b/kexizeroing.github.io/Module bundler clone.html
@@ -1,19 +1,18 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/module-bundler.md">仓库源文</a>，<a href="https://kexizeroing.github.io/module-bundler">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Module bundler clone"
 slug: module-bundler
 description: ""
 added: "Oct 9 2021"
-tags: [code]
-updatedDate: "Mar 23 2024"</h2>
+tags: [code]</p>
+<h2>updatedDate: "Mar 23 2024"</h2>
 <p>The bundler will start from the entry file, and it will try to understand which files it depends on. Then, it will try to understand which files its dependencies depend on. It will keep doing that until it figures out about every module in the application, and how they depend on one another. This understanding of a project is called the <strong>dependency graph</strong>.</p>
-<pre><code class="language-js">// https://www.youtube.com/watch?v=Gc9-7PBqOC8
+<pre><code class="lang-js">// https://www.youtube.com/watch?v=Gc9-7PBqOC8
 const fs = require('fs');
 const path = require('path');
-const babylon = require('babylon');
-// Babylon has been moved into the main Babel mono-repo as @babel/parser.
-// const parser = require("@babel/parser")
+// @babel/parser, @babel/traverse, @babel/generator (are all dependencies of @babel/core)
+const parser = require('@babel/parser');
 const traverse = require('@babel/traverse').default;
 const babel = require('@babel/core');
 
@@ -23,10 +22,9 @@ function createAsset(filename) {
   const content = fs.readFileSync(filename, 'utf-8');
 
   // AST explorer: https://astexplorer.net
-  // @babel/parser, @babel/traverse, @babel/generator (are all dependencies of @babel/core)
   // Read more: https://vivaxyblog.github.io/2020/01/05/how-babel-is-built.html
   // and https://lihautan.com/step-by-step-guide-for-writing-a-babel-transformation
-  const ast = babylon.parse(content, {
+  const ast = parser.parse(content, {
     sourceType: 'module',
   });
 
@@ -57,7 +55,7 @@ function createGraph(entry) {
   for (const asset of queue) {
     const dirname = path.dirname(asset.filename);
     asset.mapping = {};
-    
+
     asset.dependencies.forEach((relativePath) =&gt; {
       // The step of figuring out the actual path based on the requested path is called "Resolving".
       // The Node.js has the detailed step of the module resolving algorithm:
@@ -109,7 +107,7 @@ const res = bundle(graph);
 
 console.log(res);
 </code></pre>
-<pre><code class="language-js">// example of a modules parameter
+<pre><code class="lang-js">// example of a modules parameter
 {
   0: [
     function(require, module, exports) {
