--- a/kexizeroing.github.io/Add watermark to images.html
+++ b/kexizeroing.github.io/Add watermark to images.html
@@ -1,14 +1,14 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/image-add-watermark.md">仓库源文</a>，<a href="https://kexizeroing.github.io/image-add-watermark">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Add watermark to images"
 slug: image-add-watermark
 description: ""
 added: "Dec 1 2022"
-tags: [code]
-updatedDate: "Dec 01 2022"</h2>
+tags: [code]</p>
+<h2>updatedDate: "July 21 2024"</h2>
 <p>Image watermarking is the process of placing an overlay text on top of the original image, usually in one of the corners. The first approach shown below is primarily based on the HTML5 <code>&lt;canvas&gt;</code> element while the second one uses <a href="https://brianium.github.io/watermarkjs">watermark.js</a> library, which requires just a few lines of code.</p>
-<pre><code class="language-html">&lt;body&gt;
+<pre><code class="lang-html">&lt;body&gt;
   &lt;h1&gt;Add Watermark to Image&lt;/h1&gt;
   &lt;p&gt;
     Please upload a image and fill in the watermark text.
@@ -80,7 +80,11 @@ updatedDate: "Dec 01 2022"</h2>
   &lt;/script&gt;
 &lt;/body&gt;
 </code></pre>
-<pre><code class="language-js">// Use the library `watermark.js` in the browser.
+<p>The <code>HTMLCanvasElement.toDataURL()</code> method returns a data URL containing a representation of the image. The desired file format <em>(<code>image/png</code>, <code>image/jpeg</code> or <code>image/webp</code>)</em> and image quality <em>(a number between 0 and 1 indicating the image quality)</em> may be specified. If the file format is not specified, then the data will be exported as <code>image/png</code>.</p>
+<blockquote><p>Data URLs, URLs prefixed with the <code>data:</code> scheme, allow content creators to embed small files inline in documents. They are composed of four parts: a prefix (<code>data:</code>), a MIME type, an optional base64 token if non-textual, and the data itself: <code>data:[&lt;mediatype&gt;][;base64],&lt;data&gt;</code></p>
+<p><code>toDataURL()</code> encodes the whole image in an in-memory string. For larger images, this can have performance implications, and may even overflow browsers' URL length limit when assigned to <code>HTMLImageElement.src</code>. You should generally prefer <code>HTMLCanvasElement.toBlob()</code> instead, in combination with <code>URL.createObjectURL()</code>.</p>
+</blockquote>
+<pre><code class="lang-js">// Use the library `watermark.js` in the browser.
 // image as watermark
 watermark(['/img/shepherd.jpg', '/img/logo.png'])
   .image(watermark.image.lowerRight())
