--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -6,7 +6,7 @@ slug: get-started-with-langchain
 description: ""
 added: "Apr 9 2023"
 tags: [AI]</p>
-<h2>updatedDate: "May 12 2024"</h2>
+<h2>updatedDate: "July 28 2024"</h2>
 <p>ChatGPT isn’t the only way to interact with LLMs. OpenAI and other providers have released APIs allowing developers to interact directly with these models. And this is where LangChain comes in. LangChain is a framework for developing applications powered by language models, making them easier to integrate into applications.</p>
 <ul>
 <li>JS/TS Docs: <a href="https://js.langchain.com/docs">https://js.langchain.com/docs</a></li>
@@ -395,5 +395,23 @@ while (true) {
 }
 </code></pre>
 <blockquote><p>Autonomous agents are self-governing AI systems. AutoGPT is an open-source "AI agent" that, given a goal in natural language, will attempt to achieve it by breaking it into sub-tasks and using the Internet and other tools in an automatic loop. <a href="https://www.georgesung.com/ai/autogpt-arch/">https://www.georgesung.com/ai/autogpt-arch/</a> is a quick summary about how AutoGPT works.</p>
-<p>LLM Powered Autonomous Agents: <a href="https://lilianweng.github.io/posts/2023-06-23-agent">https://lilianweng.github.io/posts/2023-06-23-agent</a></p>
 </blockquote>
+<h3>Run open-source LLMs locally on your computer</h3>
+<ol>
+<li><p>Ollama + OpenWebUI</p>
+<ul>
+<li><a href="https://github.com/kexiZeroing/langchain-llamaindex-ollama">https://github.com/kexiZeroing/langchain-llamaindex-ollama</a></li>
+<li><a href="https://github.com/open-webui/open-webui">https://github.com/open-webui/open-webui</a></li>
+</ul>
+</li>
+<li><p>LM Studio</p>
+<ul>
+<li><a href="https://lmstudio.ai">https://lmstudio.ai</a></li>
+</ul>
+</li>
+<li><p>GPT4All</p>
+<ul>
+<li><a href="https://github.com/nomic-ai/gpt4all">https://github.com/nomic-ai/gpt4all</a></li>
+</ul>
+</li>
+</ol>
