--- a/kexizeroing.github.io/React hooks clone.html
+++ b/kexizeroing.github.io/React hooks clone.html
@@ -1,14 +1,14 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/react-hooks-clone.md">仓库源文</a>，<a href="https://kexizeroing.github.io/react-hooks-clone">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "React hooks clone"
 slug: react-hooks-clone
 description: ""
 added: "Sep 12 2020"
-tags: [react, code]
-updatedDate: "Oct 30 2022"</h2>
+tags: [react, code]</p>
+<h2>updatedDate: "Oct 30 2022"</h2>
 <h3>Getting Closure on Hooks presented by @swyx</h3>
-<pre><code class="language-js">// https://www.youtube.com/watch?v=KJP1E-Y-xyo
+<pre><code class="lang-js">// https://www.youtube.com/watch?v=KJP1E-Y-xyo
 const React = (function() {
   let hooks = [];
   let idx = 0;
@@ -48,11 +48,11 @@ const React = (function() {
 function Component() {
   const [count, setCount] = React.useState(1);
   const [text, setText] = React.useState('apple');
-  
+
   React.useEffect(() =&gt; {
     console.log('useEffect with count dep')
   }, [count]);
-  
+
   React.useEffect(() =&gt; {
     console.log('useEffect empty dep')
   }, []);
@@ -88,8 +88,14 @@ var App = React.render(Component);
   {count: 2, text: "pear"}`
 */
 </code></pre>
-<h3>Vanilla React useQeury Hook</h3>
-<pre><code class="language-js">import * as React from "react"
+<h3>Vanilla React data fetching</h3>
+<p>If you're going to fetch in <code>useEffect()</code>, you should at least make sure that you're handling:</p>
+<ul>
+<li>Loading states</li>
+<li>Error handling (rejections &amp; HTTP error codes)</li>
+<li>Race conditions &amp; cancellation</li>
+</ul>
+<pre><code class="lang-js">import * as React from "react"
 
 export default function useQuery(url) {
   const [data, setData] = React.useState(null)
@@ -135,15 +141,9 @@ export default function useQuery(url) {
   return { data, isLoading, error }
 }
 </code></pre>
-<blockquote>
-<ol>
-<li>React Query should be used instead: https://ui.dev/why-react-query</li>
-<li>More custom hooks explained here: https://github.com/tigerabrodi/50-react-hooks</li>
-</ol>
-</blockquote>
 <h3>Higher Order Components</h3>
 <p>HOCs are wrapper components that help provide additional functionality to existing components. While hooks probably replaced most of shared logic concerns, there are still use cases where higher-order components could be useful. For example, you want to fire analytics event on every click of every button, dropdown and link everywhere.</p>
-<pre><code class="language-js">export const withLoggingOnClick = (Component) =&gt; {
+<pre><code class="lang-js">export const withLoggingOnClick = (Component) =&gt; {
   return (props) =&gt; {
     const log = useLoggingFromSomewhere();
 
