--- a/kexizeroing.github.io/Setup a new mac.html
+++ b/kexizeroing.github.io/Setup a new mac.html
@@ -1,35 +1,33 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/start-new-mac.md">仓库源文</a>，<a href="https://kexizeroing.github.io/start-new-mac">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Setup a new mac"
 slug: setup-new-mac
 description: ""
 added: "Feb 13 2022"
-tags: [system]
-updatedDate: "Apr 05 2023"</h2>
+tags: [system]</p>
+<h2>updatedDate: "Apr 05 2023"</h2>
 <h2>Setting up development environment</h2>
 <ol>
 <li><p>The first step is getting around the firewall. You may download <a href="https://github.com/yichengchen/clashX/releases">clashX</a> and acquire subscription links from ss.</p>
 </li>
 <li><p>Install <a href="https://brew.sh">Homebrew</a> package manager, and you can install almost any app from the command line. Make sure everything is up to date <code>brew update</code>. (M1 installation at <code>/opt/homebrew/</code>, Intel at <code>/usr/local/Cellar/</code>)</p>
-<blockquote>
-<p>If it complains <code>curl: fail to connect raw.gitmirror.com port 443</code>. It's about DNS cache poisoning, we may set DNS Server to <code>8.8.8.8</code> or update the <code>/etc/hosts</code> file.</p>
+<blockquote><p>If it complains <code>curl: fail to connect raw.gitmirror.com port 443</code>. It's about DNS cache poisoning, we may set DNS Server to <code>8.8.8.8</code> or update the <code>/etc/hosts</code> file.</p>
 </blockquote>
 </li>
 <li><p>Check <code>git --version</code> and may need to install Command Line Developer Tools.</p>
 </li>
 <li><p>Install VSCode, Chrome, iTerm2, Docker through Homebrew, then you can use <code>brew list</code> and <code>brew info google-chrome</code> to check.</p>
-<pre><code class="language-shell"># refer to https://formulae.brew.sh
-brew install git yarn make
-brew install --cask visual-studio-code google-chrome iterm2 docker
+<pre><code class="lang-shell"> # refer to https://formulae.brew.sh
+ brew install git yarn make
+ brew install --cask visual-studio-code google-chrome iterm2 docker
 
-# replace with other mirror address (default is using GitHub)
-cd `brew --repo`
-git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
-brew update
+ # replace with other mirror address (default is using GitHub)
+ cd `brew --repo`
+ git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
+ brew update
 </code></pre>
-<blockquote>
-<ul>
+<blockquote><ul>
 <li><code>cask</code> is no longer a <code>brew</code> command. When you want to install a Cask, just do <code>brew install</code> or <code>brew install --cask</code> instead of <code>brew cask install</code></li>
 <li>install an package behind a proxy: <code>ALL_PROXY=127.0.0.1:7890 brew install &lt;package&gt;</code></li>
 </ul>
@@ -37,17 +35,16 @@ brew update
 </li>
 <li><p>Catalina comes with <code>zsh</code> as the default shell. Install <a href="https://github.com/ohmyzsh/ohmyzsh">Oh My Zsh</a> and check the <code>.zshrc</code> file.</p>
 <ul>
-<li><code>robbyrussell</code> is the default theme, and you can change to use <a href="https://github.com/spaceship-prompt/spaceship-prompt">spaceship prompt</a> theme.</li>
-<li>show the current shell <code>echo $SHELL</code>; list all shells <code>cat /etc/shells</code>; change the current shell <code>chsh -s /bin/zsh</code>.</li>
-</ul>
-<blockquote>
-<p>'unable to access error': Something is blocking the connection to github. It is likely some kind of firewall, either on your machine or in your network. If it works with a browser on same machine then the browser is probably using a proxy and you need to configure git to use this proxy too.</p>
+<li><p><code>robbyrussell</code> is the default theme, and you can change to use <a href="https://github.com/spaceship-prompt/spaceship-prompt">spaceship prompt</a> theme. The configuration for the prompt is stored in the <code>PS1</code> environment variable. You can see the default value by <code>echo $PS1</code>.</p>
+<blockquote><p>'unable to access error': Something is blocking the connection to github. It is likely some kind of firewall, either on your machine or in your network. If it works with a browser on same machine then the browser is probably using a proxy and you need to configure git to use this proxy too.</p>
 <ul>
 <li>check if your git uses proxy: <code>git config --global http.proxy</code></li>
 <li>set proxy address: <code>git config --global http.proxy 127.0.0.1:7890</code></li>
 <li>reset the proxy: <code>git config --global --unset http.proxy</code></li>
 </ul>
 </blockquote>
+</li>
+</ul>
 </li>
 <li><p>Use <code>nvm</code> to install Node.js, then install a version of node <code>nvm install xx.xx</code>, <code>nvm use xx.xx</code> and run <code>nvm ls</code>. Use <code>node -v &amp;&amp; npm -v</code> to check the version.</p>
 <ul>
@@ -58,15 +55,13 @@ brew update
 <li><code>npm config set registry https://registry.npmmirror.com</code> to change the registry, <code>npm config delete registry</code> to change back to default (<code>https://registry.npmjs.org/</code>), <code>npm get registry</code> to see the current set.</li>
 <li>set npm proxy <code>npm config set proxy http://127.0.0.1:7890</code> and remove this proxy <code>npm config delete proxy</code>
 &lt;img alt="npm proxy" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008i3skNly1gz5abxu18ij31bu0eijtx.jpg" width="700"&gt;</li>
-<li>Global Node modules will be installed at <code>~/.nvm/versions/node/v12.13.0/bin/</code> if you use nvm.
-&lt;img alt="global node_modules" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</li>
-</ul>
-<blockquote>
-<p>package manager mirrors: https://github.com/eryajf/Thanks-Mirror</p>
+<li><p>Global Node modules will be installed at <code>~/.nvm/versions/node/v12.13.0/bin/</code> if you use nvm.
+&lt;img alt="global node_modules" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</p>
+<blockquote><p>package manager mirrors: <a href="https://github.com/eryajf/Thanks-Mirror">https://github.com/eryajf/Thanks-Mirror</a></p>
 <ul>
-<li>Taobao: http://registry.npmmirror.com</li>
-<li>HUAWEI: https://repo.huaweicloud.com/repository/npm/</li>
-<li>Tencent: http://mirrors.cloud.tencent.com</li>
+<li>Taobao: <a href="http://registry.npmmirror.com">http://registry.npmmirror.com</a></li>
+<li>HUAWEI: <a href="https://repo.huaweicloud.com/repository/npm/">https://repo.huaweicloud.com/repository/npm/</a></li>
+<li>Tencent: <a href="http://mirrors.cloud.tencent.com">http://mirrors.cloud.tencent.com</a></li>
 </ul>
 <hr/>
 <p>Alternative ways to <code>nvm</code>:</p>
@@ -76,69 +71,71 @@ brew update
 </ul>
 </blockquote>
 </li>
+</ul>
+</li>
 <li><p>Set global configuration with Git <code>touch ~/.gitconfig</code>, and check with <code>git config --list</code>.</p>
-<pre><code>[user]
-  name   = Firstname Lastname
-  email  = you@example.com
-[github]
-  user   = username
-[alias]
-  a      = add
-  cm     = commit -m
-  s      = status
-  pom    = push origin master
-  puom   = pull origin master
-  co     = checkout
-  lg     = log --pretty=format:'%h %ad%x09%an%x09%s' --date=short
+<pre><code> [user]
+   name   = Firstname Lastname
+   email  = you@example.com
+ [github]
+   user   = username
+ [alias]
+   a      = add
+   cm     = commit -m
+   s      = status
+   pom    = push origin master
+   puom   = pull origin master
+   co     = checkout
+   lg     = log --pretty=format:'%h %ad%x09%an%x09%s' --date=short
 </code></pre>
 <p><em>(%h = commit hash, %x09 = tab, %an = author name, %ad = author date, %s = subject)</em></p>
 </li>
 <li><p>Some commands for Finder</p>
-<pre><code class="language-shell"># Show Library folder
-chflags nohidden ~/Library
+<pre><code class="lang-shell"> # Show Library folder
+ chflags nohidden ~/Library
 
-# Show hidden files
-defaults write com.apple.finder AppleShowAllFiles YES
+ # Show hidden files
+ defaults write com.apple.finder AppleShowAllFiles YES
 
-# Show path bar
-defaults write com.apple.finder ShowPathbar -bool true
+ # Show path bar
+ defaults write com.apple.finder ShowPathbar -bool true
 
-# Show status bar
-defaults write com.apple.finder ShowStatusBar -bool true
+ # Show status bar
+ defaults write com.apple.finder ShowStatusBar -bool true
 </code></pre>
-<p>A curated list of shell commands specific to macOS: https://git.herrbischoff.com/awesome-macos-command-line/about</p>
+<p>A curated list of shell commands specific to macOS: <a href="https://git.herrbischoff.com/awesome-macos-command-line/about">https://git.herrbischoff.com/awesome-macos-command-line/about</a></p>
 </li>
 <li><p>Install Chrome extension <a href="https://github.com/taniarascia/new-moon-chrome-devtools">DevTools Theme: New Moon</a>, then set devtool's theme to "Dark" and go to Experiments and select "Allow custom UI themes".</p>
 </li>
 <li><p>Add VSCode extentions like <code>Prettier</code>, <code>GitLens</code>, <code>Live Server</code>, <code>Import Cost</code>.</p>
 <ul>
 <li>Color themes I like: <a href="https://github.com/taniarascia/new-moon">New Moon Theme</a> or <a href="https://github.com/nordtheme/visual-studio-code">Nord</a>, search and install one from extentions.</li>
-<li>Prettier usage: https://prettier.io/docs/en/install.html</li>
+<li>Prettier usage: <a href="https://prettier.io/docs/en/install.html">https://prettier.io/docs/en/install.html</a></li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=wix.vscode-import-cost">Import Cost</a> will display inline in the editor the size of the imported packages.</li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=yzane.markdown-pdf">Markdown PDF</a> converts Markdown files to pdf, html, png or jpeg files in VSCode.</li>
-<li>Add <code>Emoji Snippets</code> and <code>Markdown Emoji</code> for emoji support :tada: and check https://github.com/ikatyang/emoji-cheat-sheet for emoji shortcode to use.</li>
+<li>Add <code>Emoji Snippets</code> and <code>Markdown Emoji</code> for emoji support :tada: and check <a href="https://github.com/ikatyang/emoji-cheat-sheet">https://github.com/ikatyang/emoji-cheat-sheet</a> for emoji shortcode to use.</li>
 </ul>
 </li>
-<li><p>Check out dotfiles https://github.com/mathiasbynens/dotfiles</p>
+<li><p>Check out dotfiles <a href="https://github.com/mathiasbynens/dotfiles">https://github.com/mathiasbynens/dotfiles</a></p>
 </li>
 </ol>
 <p>Some references:</p>
 <ul>
-<li>https://www.swyx.io/new-mac-setup</li>
-<li>https://www.taniarascia.com/setting-up-a-brand-new-mac-for-development</li>
-<li>https://github.com/nicolashery/mac-dev-setup</li>
-<li>https://github.com/kentcdodds/dotfiles</li>
-<li>https://github.com/stefanjudis/dotfiles</li>
-<li>https://github.com/wesbos/dotfiles</li>
-<li>https://github.com/w3cj/dotfiles</li>
-<li>https://github.com/antfu/use</li>
+<li><a href="https://www.swyx.io/new-mac-setup">https://www.swyx.io/new-mac-setup</a></li>
+<li><a href="https://www.taniarascia.com/setting-up-a-brand-new-mac-for-development">https://www.taniarascia.com/setting-up-a-brand-new-mac-for-development</a></li>
+<li><a href="https://github.com/nicolashery/mac-dev-setup">https://github.com/nicolashery/mac-dev-setup</a></li>
+<li><a href="https://github.com/kentcdodds/dotfiles">https://github.com/kentcdodds/dotfiles</a></li>
+<li><a href="https://github.com/stefanjudis/dotfiles">https://github.com/stefanjudis/dotfiles</a></li>
+<li><a href="https://github.com/wesbos/dotfiles">https://github.com/wesbos/dotfiles</a></li>
+<li><a href="https://github.com/w3cj/dotfiles">https://github.com/w3cj/dotfiles</a></li>
+<li><a href="https://github.com/antfu/use">https://github.com/antfu/use</a></li>
 </ul>
 <h2>Moving to zsh</h2>
 <p>From macOS Catalina the default shell is <code>zsh</code>. <code>zsh</code> has a list of configuration files (<code>.z*</code> files) that will get executed at shell startup. <code>zsh</code> will start with <code>/etc/zshenv</code>, then the user’s <code>.zshenv</code>. Since changes in the <code>zshenv</code> will affect <code>zsh</code> behavior in all contexts, you should be very cautious about the changes applied here. Next, when the shell is a login shell, <code>zsh</code> will run <code>/etc/zprofile</code> and <code>.zprofile</code>. For interactive shells <code>/etc/zshrc</code> and <code>.zshrc</code>. Then, again, for login shells <code>/etc/zlogin</code> and <code>.zlogin</code>.</p>
 <p><strong>macOS Terminal considers every new shell to be a login shell and an interactive shell</strong>. So, in Terminal a new <code>zsh</code> will potentially run all configuration files. For simplicity’s sake, you should use just one file and the common choice is <code>.zshrc</code>. Most tools you download to configure <code>zsh</code>, such as <code>Oh My Zsh</code>, will override or re-configure your <code>.zshrc</code>.</p>
 <h2>Git for the first time</h2>
 <p>The first thing you should do when you install Git is to set your user name and email address. This is important because every Git commit uses this information. Use <code>git config --list</code> (<code>git config --global --list</code>) command to list all the settings.</p>
-<pre><code class="language-shell"># settings in a global ~/.gitconfig file located in your home directory
+<pre><code class="lang-shell"># settings in a global ~/.gitconfig file located in your home directory
 git config --global user.name "Your name here"
 git config --global user.email "your_email@example.com"
 git config --global color.ui true
