--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -6,19 +6,18 @@ slug: start-js-stack-project
 description: ""
 added: "Jun 16 2022"
 tags: [web]</p>
-<h2>updatedDate: "Jun 30 2024"</h2>
+<h2>updatedDate: "July 16 2024"</h2>
 <h2>Start a modern web project</h2>
-<pre><code>npm create vite@latest
+<pre><code class="lang-sh"># `npm create` is an alias for `npm init`
+npm create vite@latest
 
 npm create vite@latest my-vue-app -- --template vue
 </code></pre>
-<pre><code>npx create-next-app@latest my-app --typescript --tailwind --eslint
+<pre><code class="lang-sh">npx create-next-app@latest my-app --typescript --tailwind --eslint
 
 npx shadcn-ui@latest init
-
-npx shadcn-ui@latest add button
 </code></pre>
-<pre><code>npx nuxi@latest init my-app
+<pre><code class="lang-sh">npx nuxi@latest init my-app
 </code></pre>
 <p>Start with templates:</p>
 <ul>
@@ -31,6 +30,7 @@ npx shadcn-ui@latest add button
 <ul>
 <li>@clerk/nextjs: add authentication and user management to your Next.js application.</li>
 <li>prisma and @prisma/client: an open-source ORM for Node.js and TypeScript. You can integrate Prisma with <a href="https://planetscale.com/docs/prisma/prisma-quickstart">PlanetScale</a>, a MySQL-compatible serverless database. The fastest way to get started with Prisma is by following the <a href="https://www.prisma.io/docs/getting-started/quickstart">Quickstart</a>.</li>
+<li><a href="https://neon.tech">Neon</a> is a serverless Postgres platform, <em>Neon is to PostgreSQL as PlanetScale is to MySQL</em>. Neon provides a generous free tier, making it a good fit for small applications and hobby projects. (PlanetScale has made the decision to stop offering the Hobby tier.)</li>
 <li>zustand: one of many state management libraries for React. It's kinda like Redux, but much simpler.</li>
 <li>react-hot-toast: lightweight notifications for React.</li>
 <li>lucide-react: implementation of the lucide icon library for react applications.</li>
@@ -38,9 +38,9 @@ npx shadcn-ui@latest add button
 <li>@tanstack/react-table: headless UI for building powerful tables &amp; datagrids for React. (<a href="https://tanstack.com/query/latest/docs">@tanstack/react-query</a> is more popular.)</li>
 <li>recharts: chart library to help you to write charts in React.</li>
 <li>stripe: access to the Stripe API from applications, and use <a href="https://stripe.com/docs/webhooks">webhook</a> to get real-time updates.</li>
-<li>react-quill: a React component that wraps Quill.js for both rich text editor and preview (with <code>readonly</code> props).</li>
 <li>@mux/mux-node is a Mux API wrapper for Node projects to post a video. Note that this package uses Mux access tokens and secret keys and is intended to be used in server-side code only. Also add @mux/mux-player-react to integrate <a href="https://docs.mux.com">Mux</a> player into your web application.</li>
 <li>react-confetti: create a confetti effect to celebrate the accomplishment of particular steps in an application.</li>
+<li><a href="https://github.com/vercel/next.js/tree/canary/examples/auth">next-auth</a> is a complete open-source authentication solution for Next.js applications.</li>
 </ul>
 <blockquote><p>Why Next.js written by @leeerob: I never need to write separate backends for projects I want to create. I can build my entire project with Next.js. I never have to worry about bundler, compiler, or frontend infrastructure. I'm able to use the latest React features, which I personally find to have a great developer experience. Next.js provides a bunch of components that help me keep my site fast.</p>
 </blockquote>
@@ -166,7 +166,6 @@ source-map-explorer -h
   ...
 }
 </code></pre>
-<p>&lt;img alt="source-map-ignore" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sourcemap-ignore.png" width="500" /&gt;</p>
 <blockquote><p>Learn source maps from Google Chrome Developers</p>
 <ul>
 <li>What are source maps: <a href="https://web.dev/articles/source-maps">https://web.dev/articles/source-maps</a></li>
@@ -196,22 +195,6 @@ source-map-explorer -h
         "pre-commit": "npm run lint &amp;&amp; npm run test",
         "pre-push": "npm test"
     }
-}
-</code></pre>
-<h2>Deployment a Node.js App with the frontend</h2>
-<p>Setup an Ubuntu server, install Node.js, and deploy the app with PM2 process manager and Nginx. This <a href="https://gist.github.com/bradtraversy/b8b72581ddc940e0a41e0bc09172d91b">GitHub gist</a> explains how to deploy to linode and all of the setup steps.</p>
-<pre><code>sudo npm install -g pm2
-pm2 start backend/server.js
-
-sudo apt install nginx
-
-location / {
-  proxy_pass http://localhost:5000;
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection 'upgrade';
-  proxy_set_header Host $host;
-  proxy_cache_bypass $http_upgrade;
 }
 </code></pre>
 <h3>Debugging Node.js with <code>--inspect-brk</code></h3>
@@ -250,7 +233,62 @@ location / {
 <li>The video <a href="https://www.youtube.com/watch?v=lY-RQjWeweo">So You Think You Can Build A Dropdown?</a> is diving deep into the complexities of designing and building a fully-accessible dropdown menu.</li>
 <li><a href="https://github.com/emilkowalski/vaul">Vaul</a> is an unstyled drawer component for React that can be used as a Dialog replacement on tablet and mobile devices.</li>
 </ol>
-<p>Then it leaves us with the decision about how to style things. This is where <a href="https://ui.shadcn.com">shadcn/ui</a> comes into the picture. It's not a component library, but more of a code registry where you can copy/paste/modify the code to your content. It's built with Tailwind and Radix. <code>shadcn/ui</code> is a collection of reusable components that can be copied and pasted into your apps. Every component can be installed separately. It also provides a CLI that can be used to easily import components into your project, as simple as <code>npx shadcn-ui add card</code>, making it even more convenient to use.</p>
+<p>Then it leaves us with the decision about how to style things. This is where <a href="https://ui.shadcn.com">shadcn/ui</a> comes into the picture. It's not a component library, but more of a code registry where you can copy/paste/modify the code to your content. It's built with Tailwind and Radix. <code>shadcn/ui</code> is a collection of reusable components that can be copied and pasted into your apps. Every component can be installed separately. It also provides a CLI that can be used to easily import components into your project, as simple as <code>npx shadcn-ui add card</code>, making it even more convenient to use. Here is a component demo page: <a href="https://kexizeroing.github.io/shadcn-ui">https://kexizeroing.github.io/shadcn-ui</a></p>
+<p>To understand shadcn/ui, first we need to know what does <code>cva (class-variance-authority)</code> do. It basically is a function, that allows us to define variants for the element we want to style. A simple variant definition has a name and a list of possible values, each with a list of classes that should apply.</p>
+<pre><code class="lang-jsx">// Using `cva` to handle our variant's classes
+import { cva } from "class-variance-authority";
+
+const buttonVariants = cva(["font-semibold", "border", "rounded"], {
+  variants: {
+    intent: {
+      primary: [
+        "bg-blue-500",
+        "text-white",
+        "border-transparent",
+        "hover:bg-blue-600",
+      ],
+      secondary: [
+        "bg-white",
+        "text-gray-800",
+        "border-gray-400",
+        "hover:bg-gray-100",
+      ],
+    },
+    size: {
+      small: ["text-sm", "py-1", "px-2"],
+      medium: ["text-base", "py-2", "px-4"],
+    },
+  },
+  defaultVariants: {
+    intent: "primary",
+    size: "medium",
+  },
+});
+
+buttonVariants();
+// =&gt; "font-semibold border rounded bg-blue-500 text-white border-transparent hover:bg-blue-600 text-base py-2 px-4"
+
+buttonVariants({ intent: "secondary", size: "small" });
+// =&gt; "font-semibold border rounded bg-white text-gray-800 border-gray-400 hover:bg-gray-100 text-sm py-1 px-2"
+</code></pre>
+<p><a href="https://github.com/lukeed/clsx">clsx</a> is used in <code>cva</code>. It is a utility for constructing <code>className</code> strings conditionally.</p>
+<pre><code class="lang-js">import clsx from 'clsx';
+
+clsx('foo', true &amp;&amp; 'bar', 'baz');
+//=&gt; 'foo bar baz'
+
+clsx({ foo:true, bar:false, baz:isTrue() });
+//=&gt; 'foo baz'
+
+clsx({ foo:true }, { bar:false }, null, { '--foobar':'hello' });
+//=&gt; 'foo --foobar'
+
+clsx(['foo', 0, false, 'bar']);
+//=&gt; 'foo bar'
+
+clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
+//=&gt; 'foo bar baz hello there'
+</code></pre>
 <h3>Design system examples</h3>
 <p>A design system is an ever evolving collection of reusable components, guided by rules that ensure consistency and speed, by being the single source of truth for any product development.</p>
 <ul>
@@ -278,6 +316,14 @@ location / {
 <li><strong>Function as a service (FaaS)</strong> - AWS Lambda</li>
 </ul>
 <p>Serverless functions are an approach to writing back-end code that doesn’t require writing a back-end. In the simplest terms: we write a function using our preferred language, like JavaScript; we send that function to a serverless provider; and then we can call that function just like any API using HTTP methods. These Functions are co-located with your code and part of your Git workflow. You can focus on the business needs and developing a better quality application instead of worrying about the infrastructure and maintenance of a traditional server.</p>
+<p>An intro to AWS for front-end developers:</p>
+<ol>
+<li><em>s3</em> – This is just setting up a basic S3 bucket for web hosting static assets.</li>
+<li><em>cf-s3</em> – This adds a Cloudfront distribution in front of the S3 bucket to implement edge caching of static assets.</li>
+<li><em>lambda</em> – This adds a simple Lambda with function URL to handle backend calls for the site.</li>
+<li><em>api-gateway</em> – This assumes you'll have a larger backend than a single function that you'd like to put behind an API Gateway with logical endpoints.</li>
+<li><em>dynamodb</em> – This adds a data backend stored in DynamoDB that provides data through the Lambda to the site.</li>
+</ol>
 <blockquote><p>AWS provides all the necessary building blocks for the modern web. With over 200 services, AWS caters to every aspect of web application infrastructure, including compute, storage, databases, machine learning, and more. Start watching Basic Elements of AWS: <a href="https://www.proaws.dev/tutorials/basic-elements-of-aws~hk2qv">https://www.proaws.dev/tutorials/basic-elements-of-aws~hk2qv</a></p>
 </blockquote>
 <h3>Netlify functions</h3>
@@ -321,7 +367,7 @@ Edge functions = serverless functions run at the Edge;</p>
 <li>Edge-computing providers: a limited JavaScript environment running on CDN Nodes</li>
 </ul>
 <p>For example, <a href="https://developers.cloudflare.com/workers/learning/how-workers-works">Cloudflare Workers</a> provides a serverless execution environment that allows you to create new applications without configuring or maintaining infrastructure. Under the hood, the Workers runtime uses the V8 engine. The Workers runtime also implements many of the standard APIs available in most modern browsers. Rather than running on an individual’s machine, Workers functions run on Cloudflare’s Edge Network - a growing global network of thousands of machines distributed across hundreds of locations.</p>
-<blockquote><p><em>workerd</em> is a JavaScript / Wasm server runtime based on the same code that powers Cloudflare Workers. The name "workerd" (pronounced "worker dee") comes from the Unix tradition of naming servers with a "-d" suffix standing for "daemon". The name is not capitalized because it is a program name, which are traditionally lower-case in Unix-like environments.</p>
+<blockquote><p><em>workerd</em> is a JavaScript / Wasm server runtime based on the same code that powers Cloudflare Workers. The name "workerd" (pronounced "worker dee") comes from the Unix tradition of naming servers with a "-d" suffix standing for "daemon". <em>A daemon is a background, non-interactive program. It is detached from the keyboard and display of any interactive user.</em> The name is not capitalized because it is a program name, which are traditionally lower-case in Unix-like environments.</p>
 </blockquote>
 <p>Read more about The Edge:</p>
 <ul>
