--- a/kexizeroing.github.io/Understand the event loop.html
+++ b/kexizeroing.github.io/Understand the event loop.html
@@ -1,20 +1,19 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/understand-event-loop.md">仓库源文</a>，<a href="https://kexizeroing.github.io/understand-event-loop">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Understand the event loop"
 slug: understand-the-event-loop
 description: ""
 added: "Aug 26 2020"
-tags: [js]
-updatedDate: "Mar 25 2024"</h2>
+tags: [js]</p>
+<h2>updatedDate: "Mar 25 2024"</h2>
 <h2>Inside look at a browser</h2>
 <p>A process can be described as an application's executing program. A thread is the one that lives inside of process and executes any part of its process's program. Chrome has a multi-process architecture and each process is heavily multi-threaded. The <strong>renderer process</strong> is responsible for everything that happens inside of a tab.</p>
-<p>In the most simple case, you can imagine each tab has its own renderer process. Because processes have their own private memory space, they often contain copies of common infrastructure. This means more memory usage as they can't be shared the way they would be if they were threads inside the same process. In order to save memory, Chrome puts a limit on how many processes it can spin up. The limit varies depending on how much memory and CPU power your device has, but when Chrome hits the limit, it starts to run multiple tabs from the same site in one process.</p>
+<p>In the most simple case, you can imagine each tab has its own renderer process. Because processes have their own private memory space, they often contain copies of common infrastructure. In order to save memory, Chrome puts a limit on how many processes it can spin up. The limit varies depending on how much memory and CPU power your device has, but when Chrome hits the limit, it starts to run multiple tabs from the same site in one process.</p>
 <p>In a renderer process, the <strong>main thread</strong> is where a browser processes user events and paints. By default, the browser uses a single thread to run all the JavaScript in your page <em>(sometimes parts of your JavaScript is handled by worker threads if you use a web worker or a service worker)</em>, as well as to perform layout, reflows, and garbage collection. This means that long-running JavaScript functions can block the thread, leading to an unresponsive page and a bad user experience. Frame drop happens when the main thread is too busy with running our JavaScript code so it doesn’t get the chance to update the UI so the website freezes.</p>
 <p>Compositor and raster threads are also run inside of a renderer processes to render a page efficiently and smoothly. The benefit of compositing is that it is done without involving the main thread.</p>
 <p>Everything outside of a tab is handled by the <strong>browser process</strong>. The browser process has threads like the UI thread which draws buttons and input fields of the browser, the network thread which deals with network stack to receive data from the internet, the storage thread that controls access to the files and more. For example, in the process of a navigation flow, the network thread tells UI thread that the data is ready, UI thread then finds a renderer process to carry on rendering of the web page.</p>
-<blockquote>
-<p>To open the Chrome Task Manager, click on the three dots icon in the top right corner, then select 'More tools' and you can see 'Task Manager’. With this tool, you can monitor all running processes (CPU, memory, and network usage of each open tab and extension) and stop processes that are not responding.</p>
+<blockquote><p>To open the Chrome Task Manager, click on the three dots icon in the top right corner, then select 'More tools' and you can see 'Task Manager’. With this tool, you can monitor all running processes (CPU, memory, and network usage of each open tab and extension) and stop processes that are not responding.</p>
 <p>Site Isolation (per-frame renderer processes) is a feature in Chrome that runs a separate renderer process for each cross-site iframe.</p>
 </blockquote>
 <h2>Event loop</h2>
@@ -40,6 +39,12 @@ Takes care of tasks to be done before every screen update or repaints. This proc
 </li>
 <li><p><strong>Event Loop</strong><br/>
 The Event Loop is a constantly running process and it has one simple job — to monitor the Call Stack and the Queues. If the Call Stack is empty, it will take the first event from the queue and push it to the Call Stack. Node.js and Chrome do not use the same event loop implementation. Chrome/Chromium uses <code>libevent</code>, while Node.js uses <code>libuv</code>. Check out <a href="https://www.builder.io/blog/visual-guide-to-nodejs-event-loop">A Complete Visual Guide to Understanding the Node.js Event Loop</a>.</p>
+<blockquote><p>libuv's name and logo stand for "Unicorn Velociraptor", where:</p>
+<ul>
+<li>U or Unicorn is a reference to universal and multi-platform.</li>
+<li>V or Velociraptor is a reference to velocity and high-performance.</li>
+</ul>
+</blockquote>
 </li>
 </ul>
 <p><strong>The difference between the task queue and the microtask queue is simple but very important:</strong></p>
@@ -47,7 +52,7 @@ The Event Loop is a constantly running process and it has one simple job — to 
 <li>When executing tasks from the task queue, the runtime executes each task that is in the queue at the moment a new iteration of the event loop begins. Tasks added to the queue after the iteration begins will not run until the next iteration.</li>
 <li>Each time a task exits, and the execution context stack is empty, each microtask in the microtask queue is executed, one after another. The difference is that execution of microtasks continues until the queue is empty—even if new ones are scheduled in the interim. In other words, microtasks can enqueue new microtasks and those new microtasks will execute before the next task begins to run, and before the end of the current event loop iteration.</li>
 </ul>
-<pre><code class="language-javascript">setTimeout(() =&gt; console.log(1), 0)
+<pre><code class="lang-javascript">setTimeout(() =&gt; console.log(1), 0)
 async function async1(){
   console.log(2)
   await async2()  // just syntactic sugar on top of promise
@@ -72,7 +77,8 @@ output：2 4 5 6 8 3 7 1
 */
 </code></pre>
 <p>You may argue that <code>setTimeout</code> should be logged first because a task is run first before clearing the microtask queue. Well, you are right. But, no code runs in JS unless an event has occurred and the event is queued as a task. At the execution of any JS file, the JS engine wraps the contents in a function and associates the function with an event <code>start</code>, and add the event to the task queue. After emits the program <code>start</code> event, the JavaScript engine pulls that event off the queue, executes the registered handler, and then our program runs.</p>
-<pre><code class="language-js">// blocks the rendering (freezes the webpage)
+<p>Any task that takes longer than 50 milliseconds is a long task. When a user attempts to interact with a page when there are many long tasks, the user interface will feel unresponsive. To prevent the main thread from being blocked for too long, you can break up a long task into several smaller ones. One method developers have used to break up tasks into smaller ones involves <code>setTimeout()</code>. With this technique, you pass the function to <code>setTimeout()</code>. This postpones execution of the callback into a separate task, even if you specify a timeout of 0.</p>
+<pre><code class="lang-js">// blocks the rendering (freezes the webpage)
 button.addEventListener('click', event =&gt; {
   while (true) {}
 });
@@ -88,6 +94,18 @@ loop();
   Promise.resolve().then(loop);
 })();
 </code></pre>
-<blockquote>
-<p><code>requestAnimationFrame</code> on the other hand doesn't suffer from such a direction. Indeed, the monitor's signal is what tells when the event loop must enter the "update the rendering" steps. This signal is not bound to the CPU activity and will work as a stable clock. If at one frame rAF callbacks were late by a few ms, the next frame will just have less time in between, but the flag will be set at regular intervals.</p>
-</blockquote>
+<pre><code class="lang-js">function yieldToMain () {
+  return new Promise(resolve =&gt; {
+    setTimeout(resolve, 0);
+  });
+}
+
+// Loop over the tasks:
+while (tasks.length &gt; 0) {
+  const task = tasks.shift();
+  task();
+
+  // Yield to the main thread
+  await yieldToMain();
+}
+</code></pre>
