--- a/kexizeroing.github.io/Using images in web.html
+++ b/kexizeroing.github.io/Using images in web.html
@@ -1,12 +1,12 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/using-images-in-web.md">仓库源文</a>，<a href="https://kexizeroing.github.io/using-images-in-web">站点原文</a></h2>
 <hr/>
-<h2>layout: "../layouts/BlogPost.astro"
+<p>layout: "../layouts/BlogPost.astro"
 title: "Using images in web"
 slug: using-images-in-web
 description: ""
 added: "Oct 12 2021"
-tags: [web]
-updatedDate: "Feb 26 2024"</h2>
+tags: [web]</p>
+<h2>updatedDate: "Feb 26 2024"</h2>
 <h2>Image file types</h2>
 <p>First, there are two types of compression: Lossless and Lossy.</p>
 <ul>
@@ -29,8 +29,7 @@ updatedDate: "Feb 26 2024"</h2>
 <p>GIF uses lossless compression. The file sizes are much smaller than BMP, because good compression is actually used, but it can only store an indexed color depths. This means that for most use cases, there can only be a maximum of 256 different colors in the file. GIF images can also be animated and have transparency.</p>
 <h3>JPEG</h3>
 <p>JPEG images were designed to make detailed photographic images as small as possible by removing information that the human eye won't notice. As a result it's a lossy format. It stores direct color depth and so is great for photographs, but the lossy compression means it's bad for logos and line drawings: Not only will they look fuzzy, but such images will also have a larger file-size compared to GIFs.</p>
-<blockquote>
-<p>JPG and JPEG stand both for an image format proposed and supported by the Joint Photographic Experts Group. The two terms have the same meaning and are interchangeable. The reason for the different file extensions dates back to the early versions of Windows. The original file extension was '.jpeg'; however in Windows at that time all files required a three letter file extension. So, the file extension was shortened to '.jpg'.</p>
+<blockquote><p>JPG and JPEG stand both for an image format proposed and supported by the Joint Photographic Experts Group. The two terms have the same meaning and are interchangeable. The reason for the different file extensions dates back to the early versions of Windows. The original file extension was '.jpeg'; however in Windows at that time all files required a three letter file extension. So, the file extension was shortened to '.jpg'.</p>
 </blockquote>
 <h3>PNG-8</h3>
 <p>PNG-8 (the indexed version of PNG) is really a good replacement for GIFs. It is also lossless. However, it cannot support animation like GIFs, and it has some support issues with very old browsers. The main thing that PNG-8 does better than GIFs is having support for alpha-transparency.</p>
@@ -38,7 +37,7 @@ updatedDate: "Feb 26 2024"</h2>
 <p>PNG-24 is a great format that combines lossless encoding with direct color. Unfortunately PNG-24 files will still be bigger than JPEGs (for photos), and GIFs/PNG-8s (for logos and graphics). They are not intended to replace JPEG images. A photograph saved as a PNG-24 will likely be at least 5 times larger than a equivalent JPEG image, with very little improvement in visible quality. Just like PNG-8, PNG-24 supports alpha-transparency too.</p>
 <h3>SVG</h3>
 <p>SVG is different than all the above in that it's a vector file format (the above are all raster). This means SVG is perfect for logos and icons you wish to retain sharpness on Retina screens or at different sizes. It also means a small SVG logo can be used at a much larger size without degradation in image quality. SVG file sizes are often tiny, even if they're visually very large, which is great. However, it does depend on the complexity of the shapes used, and SVGs require more computing power than raster images because mathematical calculations are involved in drawing the curves and lines.</p>
-<pre><code class="language-xml">&lt;svg viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg"&gt;
+<pre><code class="lang-xml">&lt;svg viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;circle cx="400" cy="400" fill="none"
     r="200" stroke-width="50" stroke="#E387FF" /&gt;
 &lt;/svg&gt;
@@ -46,8 +45,7 @@ updatedDate: "Feb 26 2024"</h2>
 <h3>Webp</h3>
 <p>WebP is an image format developed and first released by Google in 2010. It supports encoding images in both lossless and lossy formats, making it a great alternative format to both PNG or JPEG. WebP lossless images are 26% smaller in size compared to PNGs. WebP lossy images are 25-34% smaller than comparable JPEG images. It also supports transparency and animation.</p>
 <p>WebP is natively supported in Google Chrome, Firefox, Edge, the Opera browser, and by many other tools and software libraries. (Safari will support WebP in version 14 for macOS Big Sur, iPadOS 14, iOS 14, which is expected to be released in 2020).</p>
-<blockquote>
-<p>We can use <code>&lt;picture&gt;</code> element to rescue. IE doesn't support <code>&lt;picture&gt;</code>, but this still works as intended. This is because when the browser finds an element it doesn't understand, it treats it as a <code>&lt;div&gt;</code>. So what we get are a bunch of <code>&lt;div&gt;</code> and an <code>&lt;img&gt;</code> tag.</p>
+<blockquote><p>We can use <code>&lt;picture&gt;</code> element to rescue. IE doesn't support <code>&lt;picture&gt;</code>, but this still works as intended. This is because when the browser finds an element it doesn't understand, it treats it as a <code>&lt;div&gt;</code>. So what we get are a bunch of <code>&lt;div&gt;</code> and an <code>&lt;img&gt;</code> tag.</p>
 </blockquote>
 <p>To check if it's actually working, the best trick is to right-click and "Save as…". On Chrome, you should get a "Google WebP" file format, whereas on Safari or IE you should get a "JPEG". Google has created a suite of tools to help us work with WebP files. One of those tools is <strong>cwebp</strong>, which lets us convert other image formats to WebP.</p>
 <h3>AVIF</h3>
@@ -55,7 +53,7 @@ updatedDate: "Feb 26 2024"</h2>
 <p>AVIF outperformed both JPEG and WebP. Companies like Netflix and Facebook want AVIF to become an image format standard on the web. They provided numerous visual examples that showed how AVIF was a preferred image format compared to JPEG. It’s currently only supported by Chrome. Hopefully AVIF won’t take ten years to get adopted by all major browsers like it did for WebP. Regardless, webmasters can use the AVIF image format now by using the same <code>srcset</code> attribute used for WebP.</p>
 <h2>Responsive images</h2>
 <p>This is where the <code>img</code> tag's <code>sizes</code> and <code>srcset</code> attributes come to into play. The TL;DR of these attributes is that it allows you to tell the browser different versions of your image for different screen widths and what size the image should be for a given set of media queries.</p>
-<pre><code class="language-html">&lt;!-- Different sizes --&gt;
+<pre><code class="lang-html">&lt;!-- Different sizes --&gt;
 &lt;!-- The `sizes` attribute is required any time you use `srcset` width descriptors --&gt;
 &lt;img srcset="elva-fairy-480w.jpg 480w,
              elva-fairy-800w.jpg 800w"
@@ -89,20 +87,53 @@ updatedDate: "Feb 26 2024"</h2>
 </code></pre>
 <p>The <code>srcset</code> defines the set of images we will allow the browser to choose between. We write an image filename, a space, and the image's intrinsic width in pixels (<code>480w</code>) — note that this uses the <code>w</code> unit not <code>px</code>.</p>
 <p>The browser will look at its device width and work out which media condition in the <code>sizes</code> list is the first one to be true (<code>sizes</code> is not needed for different resolutions). We’re telling the browser what size the image will be in relation to the size of the viewport. And we can tell the browser how that relationship changes as the size of the viewport changes.</p>
-<blockquote>
-<ol>
-<li>In each comma-separated item, the first value is a media condition. The second value is a length, which can be absolute or relative. When there is no media condition listed, the length is assumed to be a default value.</li>
-<li>The read-only property <code>currentSrc</code> in the <code>&lt;img&gt;</code> element lets you determine which image from the set of provided images was selected by the browser.</li>
-</ol>
+<blockquote><p>The read-only property <code>currentSrc</code> in the <code>&lt;img&gt;</code> element lets you determine which image from the set of provided images was selected by the browser.</p>
 </blockquote>
 <p><code>&lt;picture&gt;</code> allows browsers to skip images they do not recognize, you can include images in your order of preference. <strong>The browser selects the first one it supports</strong>. The features — <code>srcset/sizes/&lt;picture&gt;</code> — are all supported in modern desktop and mobile browsers (including Microsoft's Edge browser, although not Internet Explorer.)</p>
 <p>Read more about best practices for web images:</p>
 <ul>
-<li>https://github.com/nucliweb/image-element</li>
-<li>https://ausi.github.io/respimagelint/docs.html</li>
-<li>https://web.dev/browser-level-image-lazy-loading</li>
-<li>https://github.com/lovell/sharp</li>
+<li><a href="https://github.com/nucliweb/image-element">https://github.com/nucliweb/image-element</a></li>
+<li><a href="https://ausi.github.io/respimagelint/docs.html">https://ausi.github.io/respimagelint/docs.html</a></li>
+<li><a href="https://web.dev/browser-level-image-lazy-loading">https://web.dev/browser-level-image-lazy-loading</a></li>
+<li><a href="https://github.com/lovell/sharp">https://github.com/lovell/sharp</a></li>
 </ul>
 <h3>Let the CDN do the work</h3>
-<p>Most images on modern websites are hosted on a CDN that can resize images on the fly and deliver them at the edge. Despite this, most web frameworks will still download and resize the image at build time or on your server, rather than using the CDN, or just uses a single source image rather than handling multiple resolutions.</p>
+<p>Most images on modern websites are hosted on a CDN that can resize images on the fly and deliver them at the edge.</p>
 <p>The library <a href="https://github.com/ascorbic/unpic-img">unpic-img</a> detects the image CDN, and then uses the CDN's URL API to resize and format images. It then generates the correct srcset and sizes attributes for the image. It uses new features built into modern browsers to handle lazy loading, fetch priority and decoding. It also uses pure CSS to handle responsive resizing of images, preserving aspect ratio and avoiding layout shift.</p>
+<p>It turns this:</p>
+<pre><code class="lang-js">import { Image } from "@unpic/react";
+
+function MyComponent() {
+  return (
+    &lt;Image
+      src="https://cdn.shopify.com/static/sample-images/bath_grande_crop_center.jpeg"
+      layout="constrained"
+      width={800}
+      height={600}
+      alt="Shopify"
+    /&gt;
+  );
+}
+</code></pre>
+<p>into this:</p>
+<pre><code class="lang-html">&lt;img
+  alt="Shopify"
+  loading="lazy"
+  decoding="async"
+  sizes="(min-width: 800px) 800px, 100vw"
+  srcset="
+    https://cdn.shopify.com/static/sample-images/bath.jpeg?crop=center&amp;amp;width=1600&amp;amp;height=2133 1600w,
+    https://cdn.shopify.com/static/sample-images/bath.jpeg?crop=center&amp;amp;width=1280&amp;amp;height=1707 1280w,
+    https://cdn.shopify.com/static/sample-images/bath.jpeg?crop=center&amp;amp;width=1080&amp;amp;height=1440 1080w,
+    ...
+  "
+  src="https://cdn.shopify.com/static/sample-images/bath.jpeg?width=800&amp;amp;height=600&amp;amp;crop=center"
+  style="
+    object-fit: cover;
+    max-width: 800px;
+    max-height: 600px;
+    aspect-ratio: 1.33333 / 1;
+    width: 100%;
+  "
+/&gt;
+</code></pre>
