--- a/kexizeroing.github.io/Vue reactivity clone.html
+++ b/kexizeroing.github.io/Vue reactivity clone.html
@@ -6,11 +6,9 @@ slug: vue-reactivity-clone
 description: ""
 added: "Jun 18 2023"
 tags: [vue, code]</p>
-<h2>updatedDate: "Mar 7 2024"</h2>
+<h2>updatedDate: "July 27 2024"</h2>
 <p>In a reactive programming context, dependency tracking is a technique used to automatically update computations that depend on some input data when that data changes. In order for dependency tracking to work, the reactive framework needs to know which computations depend on which data. This is typically done by wrapping the data in reactive objects or variables that the framework can monitor for changes. When a piece of data changes, the framework can then notify any computations that depend on that data and trigger a re-evaluation of those computations.</p>
 <p>Reactive data can be broadly thought of as data that causes some intended side effect when accessed or modified. By default, JavaScript isn’t reactive.</p>
-<blockquote><p>Patterns for Reactivity with Modern Vanilla JavaScript: <a href="https://frontendmasters.com/blog/vanilla-javascript-reactivity">https://frontendmasters.com/blog/vanilla-javascript-reactivity</a></p>
-</blockquote>
 <pre><code class="lang-js">let framework = 'Vue'
 let sentence = `${framework} is awesome`
 console.log(sentence)
@@ -29,6 +27,8 @@ console.log(sentence)
 <li><code>ref()</code> is calling <code>reactive()</code> behind the scenes.</li>
 <li><code>ref()</code> has a <code>.value</code> property for reassigning, <code>reactive()</code> does not have this and therefore CANNOT be reassigned.</li>
 </ul>
+<h3>Why Vue component data needs to be a function?</h3>
+<p>To ensure that each instance has its own unique set of data, the data option in a component must be a function that returns an object, rather than an object itself. This is because the object returned from a function is created every time a new instance of the component is created, while an object assigned directly to the data option would be shared across all instances. Methods, computed property definitions, and lifecycle hooks are created and stored only once, and run against every instance of a component.</p>
 <h3>Shortcomings of React <code>useState()</code></h3>
 <p>React <code>useState()</code> returns a state, the value. This means that <code>useState()</code> has no idea how the state value is used inside the component. The implication is that once you notify React of state change through a call to <code>setState()</code>, React has no idea which part of the page has changed and therefore must re-render the whole component.</p>
 <p>It's worth noting that while React may re-render the entire component, it does so efficiently. React uses virtual DOM diffing to minimize the amount of work required to update the DOM. This means that even if a component has a large number of elements, React can update only the parts of the DOM that have changed, resulting in a fast and efficient re-render.</p>
@@ -44,6 +44,8 @@ export function signal(initialValue) {
   const s = () =&gt; r.value
   s.set = value =&gt; { r.value = value }
   s.update = updater =&gt; { r.value = updater(r.value) }
+  // `triggerRef` is used to force trigger effects that depends on a shallow ref.
+  // It is used after making deep mutations to the inner value of a shallow ref.
   s.mutate = mutator =&gt; { mutator(r.value); triggerRef(r) }
   return s
 }
@@ -60,8 +62,8 @@ let activeEffect = null
 let dep = new Set()
 
 function track(target, key) {
-  // in reality, get the dep from depsMap of targetMap
   if (activeEffect) {
+    // in reality, get the dep from depsMap of targetMap
     dep.add(activeEffect)
   }
 }
@@ -73,13 +75,11 @@ function trigger(target, key) {
 function reactive(target) {
   const handler = {
     get(target, key, receiver) {
-      // return target[key]
       const result = Reflect.get(target, key, receiver)
       track(target, key)
       return result
     },
     set(target, key, value, receiver) {
-      // target[key] = value
       const result = Reflect.set(target, key, value, receiver)
       trigger(target, key)
       return result
@@ -90,12 +90,13 @@ function reactive(target) {
 
 function effect(fn) {
   activeEffect = fn
-  if (activeEffect) activeEffect()
+  activeEffect()
   activeEffect = null
 }
 
 let product = reactive({ price: 10, quantity: 4 })
 let total = 0
+
 // watcher
 effect(() =&gt; {
   total = product.price * product.quantity
@@ -145,9 +146,13 @@ Object.keys(product).forEach(key =&gt; {
 function watcher(fn) {
   target = fn
   target()
+  // ensures that each watcher only collects the dependencies it directly uses
   target = null
 }
 
+// 1. update computed properties
+// 2. trigger watch callbacks 
+// 3. creates a watcher for the component's render function
 watcher(() =&gt; {
   total = product.price * product.quantity
   console.log('total changed ', total)
@@ -161,4 +166,6 @@ product.price = 12
 <li>It cannot detect property addition or deletion.</li>
 <li>It cannot detect the changes to an array when you directly set an item with the index.</li>
 </ol>
-<p>To work around this, you can use <code>Vue.set(object, propertyName, value)</code> method instead. <em>(<code>this.$set</code> instance method is an alias to the global <code>Vue.set</code>)</em></p>
+<blockquote><p>Vue wraps an observed array’s mutation methods (<code>push</code>, <code>pop</code>, <code>unshift</code>, <code>shift</code>, etc) so they will trigger view updates.</p>
+</blockquote>
+<p>To work around this, you can use <code>Vue.set(object, propertyName, value)</code> method instead. (<code>this.$set</code> instance method is an alias to the global <code>Vue.set</code>)</p>
